// Package lifecycle äº¤æ˜“ç”Ÿå‘½å‘¨æœŸç®¡ç† - ç­¾åå®ç°
//
// ğŸ¯ **æ¨¡å—å®šä½**ï¼šTransactionManager æ¥å£çš„äº¤æ˜“ç­¾ååŠŸèƒ½å®ç°
//
// æœ¬æ–‡ä»¶å®ç°äº¤æ˜“ç­¾åçš„æ ¸å¿ƒä¸šåŠ¡é€»è¾‘ï¼ŒåŒ…æ‹¬ï¼š
// - äº¤æ˜“æ•°å­—ç­¾åï¼ˆSignTransactionï¼‰
// - æ”¯æŒå¤šç§ç­¾åç®—æ³•ï¼ˆECDSAã€Ed25519ç­‰ï¼‰
// - ç­¾åæ•°æ®æ ¼å¼åŒ–å’ŒéªŒè¯
// - ç­¾åå“ˆå¸Œè®¡ç®—å’Œæ ‡å‡†åŒ–
// - ç­¾åå®‰å…¨æ£€æŸ¥å’Œé˜²æŠ¤
//
// ğŸ—ï¸ **æ¶æ„å®šä½**ï¼š
// - ä¸šåŠ¡å±‚ï¼šå®ç°äº¤æ˜“ç­¾åçš„ä¸šåŠ¡é€»è¾‘
// - å¯†ç å­¦å±‚ï¼šä¸å¯†ç å­¦ç­¾ååº“çš„é›†æˆ
// - å®‰å…¨å±‚ï¼šç­¾åå®‰å…¨æ£€æŸ¥å’Œæ”»å‡»é˜²æŠ¤
// - æ ‡å‡†å±‚ï¼šéµå¾ªåŒºå—é“¾ç­¾åæ ‡å‡†
//
// ğŸ”§ **è®¾è®¡åŸåˆ™**ï¼š
// - ç®—æ³•ä¸­ç«‹ï¼šæ”¯æŒå¤šç§ç­¾åç®—æ³•
// - å®‰å…¨ä¼˜å…ˆï¼šä¸¥æ ¼çš„ç­¾åéªŒè¯å’Œå®‰å…¨æ£€æŸ¥
// - æ ‡å‡†å…¼å®¹ï¼šéµå¾ª Bitcoin/Ethereum ç­¾åæ ‡å‡†
// - æ€§èƒ½ä¼˜åŒ–ï¼šé«˜æ•ˆçš„ç­¾åè®¡ç®—å’ŒéªŒè¯
// - é”™è¯¯é€æ˜ï¼šè¯¦ç»†çš„ç­¾åé”™è¯¯è¯Šæ–­
//
// ğŸ“‹ **æ”¯æŒçš„ç­¾åç®—æ³•**ï¼š
// - ECDSA secp256k1ï¼šBitcoin å…¼å®¹ç­¾åç®—æ³•
// - ECDSA secp256r1ï¼šä¼ä¸šçº§å®‰å…¨ç­¾å
// - Ed25519ï¼šé«˜æ€§èƒ½æ¤­åœ†æ›²çº¿ç­¾å
// - Schnorrï¼šèšåˆç­¾åæ”¯æŒ
//
// ğŸ¯ **ç­¾åç±»å‹**ï¼š
// - SIGHASH_ALLï¼šç­¾åæ•´ä¸ªäº¤æ˜“
// - SIGHASH_NONEï¼šä¸ç­¾åè¾“å‡º
// - SIGHASH_SINGLEï¼šåªç­¾åå¯¹åº”è¾“å‡º
// - SIGHASH_ANYONECANPAYï¼šå…è®¸æ·»åŠ è¾“å…¥
//
// âš ï¸ **å®ç°çŠ¶æ€**ï¼š
// å½“å‰ä¸ºè–„å®ç°é˜¶æ®µï¼Œæä¾›æ¥å£éª¨æ¶å’ŒåŸºç¡€éªŒè¯
// å®Œæ•´ä¸šåŠ¡é€»è¾‘å°†åœ¨åç»­è¿­ä»£ä¸­å®ç°
package lifecycle

import (
	"bytes"
	"context"
	"fmt"
	"time"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/repository"
	"github.com/weisyn/v1/pkg/types"

	// åè®®å®šä¹‰
	"github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pb/blockchain/utxo"

	// åŸºç¡€è®¾æ–½
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"

	// å†…éƒ¨å·¥å…·
	"github.com/weisyn/v1/internal/core/blockchain/transaction/internal"
)

// ============================================================================
//
//	äº¤æ˜“ç­¾åå®ç°æœåŠ¡
//
// ============================================================================
// TransactionSignService äº¤æ˜“ç­¾åæ ¸å¿ƒå®ç°æœåŠ¡
//
// ğŸ¯ **æœåŠ¡èŒè´£**ï¼š
// - å®ç° TransactionManager.SignTransaction æ–¹æ³•
// - å¤„ç†å„ç±»ç­¾åç®—æ³•çš„äº¤æ˜“ç­¾å
// - ç®¡ç†ç­¾åæ•°æ®çš„æ ¼å¼åŒ–å’ŒéªŒè¯
// - ä¿è¯ç­¾åçš„å®‰å…¨æ€§å’Œæ­£ç¡®æ€§
//
// ğŸ”§ **ä¾èµ–æ³¨å…¥**ï¼š
// - signatureProviderï¼šæ•°å­—ç­¾åæä¾›æœåŠ¡
// - hashCalculatorï¼šäº¤æ˜“å“ˆå¸Œè®¡ç®—æœåŠ¡
// - cacheStoreï¼šäº¤æ˜“ç¼“å­˜å­˜å‚¨
// - loggerï¼šæ—¥å¿—è®°å½•æœåŠ¡
//
// ğŸ“ **ä½¿ç”¨ç¤ºä¾‹**ï¼š
//
//	service := NewTransactionSignService(sigProvider, hashCalc, cache, logger)
//	signedTx, err := service.SignTransaction(ctx, txHash, privateKey)
type TransactionSignService struct {
	// æ ¸å¿ƒä¾èµ–æœåŠ¡ï¼ˆä½¿ç”¨å…¬å…±æ¥å£ï¼‰
	signatureManager crypto.SignatureManager                  // æ•°å­—ç­¾åæœåŠ¡
	keyManager       crypto.KeyManager                        // å¯†é’¥ç®¡ç†æœåŠ¡
	addressManager   crypto.AddressManager                    // åœ°å€ç®¡ç†æœåŠ¡
	utxoManager      repository.UTXOManager                   // UTXOç®¡ç†å™¨
	txHashService    transaction.TransactionHashServiceClient // äº¤æ˜“å“ˆå¸ŒæœåŠ¡
	memoryStore      storage.MemoryStore                      // å†…å­˜å­˜å‚¨æœåŠ¡
	logger           log.Logger                               // æ—¥å¿—è®°å½•å™¨
}

// NewTransactionSignService åˆ›å»ºäº¤æ˜“ç­¾åæœåŠ¡å®ä¾‹
//
// ğŸ—ï¸ **æ„é€ å™¨æ¨¡å¼**ï¼š
// ä½¿ç”¨ä¾èµ–æ³¨å…¥åˆ›å»ºæœåŠ¡å®ä¾‹ï¼Œç¡®ä¿æ‰€æœ‰ä¾èµ–éƒ½å·²æ­£ç¡®åˆå§‹åŒ–
//
// å‚æ•°ï¼š
//   - signatureProvider: æ•°å­—ç­¾åæä¾›æœåŠ¡
//   - hashCalculator: äº¤æ˜“å“ˆå¸Œè®¡ç®—æœåŠ¡
//   - cacheStore: äº¤æ˜“ç¼“å­˜å­˜å‚¨æœåŠ¡
//   - logger: æ—¥å¿—è®°å½•å™¨
//
// è¿”å›ï¼š
//   - *TransactionSignService: äº¤æ˜“ç­¾åæœåŠ¡å®ä¾‹
//
// ğŸš¨ **æ³¨æ„äº‹é¡¹**ï¼š
// æ‰€æœ‰ä¾èµ–å‚æ•°éƒ½ä¸èƒ½ä¸º nilï¼Œå¦åˆ™ panic
func NewTransactionSignService(
	signatureManager crypto.SignatureManager,
	keyManager crypto.KeyManager,
	addressManager crypto.AddressManager,
	utxoManager repository.UTXOManager,
	txHashService transaction.TransactionHashServiceClient,
	memoryStore storage.MemoryStore,
	logger log.Logger,
) *TransactionSignService {
	// ä¸¥æ ¼æ ¡éªŒå…³é”®ä¾èµ–éç©º
	if signatureManager == nil {
		panic("TransactionSignService: signatureManagerä¸èƒ½ä¸ºnil")
	}
	if keyManager == nil {
		panic("TransactionSignService: keyManagerä¸èƒ½ä¸ºnil")
	}
	if addressManager == nil {
		panic("TransactionSignService: addressManagerä¸èƒ½ä¸ºnil")
	}
	if utxoManager == nil {
		panic("TransactionSignService: utxoManagerä¸èƒ½ä¸ºnil")
	}
	if txHashService == nil {
		panic("TransactionSignService: txHashServiceä¸èƒ½ä¸ºnil")
	}
	if memoryStore == nil {
		panic("TransactionSignService: memoryStoreä¸èƒ½ä¸ºnil")
	}
	if logger == nil {
		panic("TransactionSignService: loggerä¸èƒ½ä¸ºnil")
	}

	return &TransactionSignService{
		signatureManager: signatureManager,
		keyManager:       keyManager,
		addressManager:   addressManager,
		utxoManager:      utxoManager,
		txHashService:    txHashService,
		memoryStore:      memoryStore,
		logger:           logger,
	}
}

// ============================================================================
//
//	æ ¸å¿ƒäº¤æ˜“ç­¾åæ–¹æ³•å®ç°
//
// ============================================================================
// SignTransaction å®ç°äº¤æ˜“ç­¾ååŠŸèƒ½ï¼ˆå®Œæ•´å®ç°ï¼‰
//
// ğŸ¯ **æ–¹æ³•èŒè´£**ï¼š
// å®ç° blockchain.TransactionManager.SignTransaction æ¥å£
// å¯¹å·²æ„å»ºçš„äº¤æ˜“è¿›è¡Œæ•°å­—ç­¾å
//
// ğŸ“‹ **ä¸šåŠ¡æµç¨‹**ï¼š
// 1. éªŒè¯äº¤æ˜“å“ˆå¸Œå’Œç§é’¥çš„æœ‰æ•ˆæ€§
// 2. ä»ç¼“å­˜ä¸­åŠ è½½æœªç­¾åçš„äº¤æ˜“æ•°æ®
// 3. è®¡ç®—äº¤æ˜“çš„ç­¾åå“ˆå¸Œï¼ˆæ ¹æ® SIGHASH ç±»å‹ï¼‰
// 4. ä½¿ç”¨ç§é’¥å¯¹ç­¾åå“ˆå¸Œè¿›è¡Œæ•°å­—ç­¾å
// 5. å°†ç­¾åæ•°æ®å¡«å…¥äº¤æ˜“çš„è§£é”è¯æ˜ä¸­
// 6. éªŒè¯ç­¾åçš„æ­£ç¡®æ€§å’Œå®Œæ•´æ€§
// 7. æ›´æ–°ç¼“å­˜ä¸­çš„å·²ç­¾åäº¤æ˜“æ•°æ®
// 8. è¿”å›å®Œæ•´çš„å·²ç­¾åäº¤æ˜“å­—èŠ‚æ•°æ®
//
// ğŸ“ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼Œç”¨äºè¶…æ—¶æ§åˆ¶å’Œå–æ¶ˆæ“ä½œ
//   - transactionHash: å¾…ç­¾åäº¤æ˜“çš„å“ˆå¸Œï¼ˆç”±æ„å»ºæ–¹æ³•è¿”å›ï¼‰
//   - privateKey: ç­¾åç§é’¥ï¼ˆæ”¯æŒå¤šç§ç®—æ³•ï¼‰
//
// ğŸ“¤ **è¿”å›å€¼**ï¼š
//   - []byte: å®Œæ•´çš„å·²ç­¾åäº¤æ˜“å­—èŠ‚æ•°æ®ï¼Œå¯ç›´æ¥æäº¤åˆ°ç½‘ç»œ
//   - error: é”™è¯¯ä¿¡æ¯ï¼Œç­¾åå¤±è´¥æ—¶è¿”å›å…·ä½“åŸå› 
//
// ğŸ¯ **ç­¾åç‰¹æ€§**ï¼š
// - å¤šç®—æ³•æ”¯æŒï¼šECDSAã€Ed25519ã€Schnorrç­‰
// - SIGHASH ç±»å‹ï¼šæ”¯æŒ ALLã€NONEã€SINGLEç­‰ç­¾åèŒƒå›´
// - å®‰å…¨éªŒè¯ï¼šç­¾ååç«‹å³éªŒè¯ç­¾åæ­£ç¡®æ€§
// - æ ‡å‡†å…¼å®¹ï¼šç¬¦åˆåŒºå—é“¾è¡Œä¸šç­¾åæ ‡å‡†
func (s *TransactionSignService) SignTransaction(
	ctx context.Context,
	transactionHash []byte,
	privateKey []byte,
) ([]byte, error) {
	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("ğŸš€ å¼€å§‹ç­¾åäº¤æ˜“ - txHash: %x", transactionHash))
	}

	// ğŸ“‹ åŸºç¡€å‚æ•°éªŒè¯
	if len(transactionHash) != 32 {
		return nil, fmt.Errorf("æ— æ•ˆçš„äº¤æ˜“å“ˆå¸Œé•¿åº¦: %dï¼Œåº”ä¸º32å­—èŠ‚", len(transactionHash))
	}
	if len(privateKey) == 0 {
		return nil, fmt.Errorf("ç§é’¥ä¸èƒ½ä¸ºç©º")
	}

	// ğŸ” éªŒè¯ç§é’¥æœ‰æ•ˆæ€§
	err := s.validatePrivateKey(privateKey)
	if err != nil {
		return nil, fmt.Errorf("ç§é’¥éªŒè¯å¤±è´¥: %v", err)
	}

	// ğŸ”„ ä»ç¼“å­˜åŠ è½½æœªç­¾åäº¤æ˜“
	tx, err := s.loadTransactionFromCache(ctx, transactionHash)
	if err != nil {
		return nil, fmt.Errorf("ä»ç¼“å­˜åŠ è½½äº¤æ˜“å¤±è´¥: %v", err)
	}

	// ğŸ” æ·»åŠ ç­¾ååˆ°äº¤æ˜“
	err = s.addSignatureToTransaction(ctx, tx, privateKey)
	if err != nil {
		return nil, fmt.Errorf("æ·»åŠ ç­¾åå¤±è´¥: %v", err)
	}

	// ğŸ§® è®¡ç®—ç­¾ååçš„å“ˆå¸Œ
	signedHash, err := s.computeSignedTransactionHash(ctx, tx)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—ç­¾åå“ˆå¸Œå¤±è´¥: %v", err)
	}

	// ğŸ’¾ æ›´æ–°ç¼“å­˜
	err = s.updateTransactionCache(ctx, transactionHash, signedHash, tx)
	if err != nil {
		return nil, fmt.Errorf("æ›´æ–°ç¼“å­˜å¤±è´¥: %v", err)
	}

	if s.logger != nil {
		s.logger.Info(fmt.Sprintf("âœ… äº¤æ˜“ç­¾åå®Œæˆ - originalHash: %x, signedHash: %x", transactionHash, signedHash))
	}

	return signedHash, nil
}

// ============================================================================
//
//	ç§æœ‰è¾…åŠ©æ–¹æ³•
//
// ============================================================================
// loadTransactionFromCache ä»ç¼“å­˜ä¸­åŠ è½½äº¤æ˜“æ•°æ®
//
// ğŸ” **åŠ è½½å†…å®¹**ï¼š
// - å®Œæ•´çš„äº¤æ˜“ç»“æ„
// - ç­¾åå‰çš„é¢„å¤„ç†æ•°æ®
// - äº¤æ˜“æ„å»ºæ—¶çš„å…ƒä¿¡æ¯
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - transactionHash: äº¤æ˜“å“ˆå¸Œ
//
// è¿”å›ï¼š
//   - *transaction.Transaction: äº¤æ˜“æ•°æ®
//   - error: åŠ è½½å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (s *TransactionSignService) loadTransactionFromCache(
	ctx context.Context,
	transactionHash []byte,
) (*transaction.Transaction, error) {
	if s.logger != nil {
		s.logger.Debug("ä»ç¼“å­˜åŠ è½½äº¤æ˜“æ•°æ®")
	}

	// ä½¿ç”¨ç»Ÿä¸€çš„ç¼“å­˜æ¥å£è·å–æœªç­¾åäº¤æ˜“
	tx, exists, err := internal.GetUnsignedTransactionFromCache(ctx, s.memoryStore, transactionHash, s.logger)
	if err != nil {
		return nil, fmt.Errorf("è·å–äº¤æ˜“å¤±è´¥: %v", err)
	}
	if !exists {
		return nil, fmt.Errorf("æœªç­¾åäº¤æ˜“ä¸å­˜åœ¨äºç¼“å­˜ä¸­: %x", transactionHash)
	}

	return tx, nil
}

// computeSignature è®¡ç®—äº¤æ˜“ç­¾å
//
// ğŸ” **æ•°å­—ç­¾åè®¡ç®—å™¨**
//
// ä½¿ç”¨ç§é’¥å¯¹äº¤æ˜“æ•°æ®è¿›è¡Œæ•°å­—ç­¾åã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: äº¤æ˜“å¯¹è±¡
//   - privateKey: ç§é’¥
//
// è¿”å›ï¼š
//   - []byte: ç­¾åæ•°æ®
//   - error: ç­¾åé”™è¯¯
func (s *TransactionSignService) computeSignature(
	ctx context.Context,
	tx *transaction.Transaction,
	privateKey []byte,
) ([]byte, error) {
	if s.logger != nil {
		s.logger.Debug("å¼€å§‹è®¡ç®—äº¤æ˜“çœŸå®ç­¾å")
	}

	// 1. ä½¿ç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
	hashReq := &transaction.ComputeHashRequest{
		Transaction:      tx,
		IncludeDebugInfo: false,
	}

	hashResp, err := s.txHashService.ComputeHash(ctx, hashReq)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// 2. ä½¿ç”¨ç­¾åç®¡ç†å™¨è¿›è¡ŒçœŸå®ç­¾å
	signature, err := s.signatureManager.Sign(hashResp.Hash, privateKey)
	if err != nil {
		return nil, fmt.Errorf("äº¤æ˜“ç­¾åå¤±è´¥: %w", err)
	}

	// 3. éªŒè¯ç­¾åæœ‰æ•ˆæ€§ï¼ˆè‡ªæˆ‘æ ¡éªŒï¼‰
	publicKey, err := s.keyManager.DerivePublicKey(privateKey)
	if err != nil {
		return nil, fmt.Errorf("ä»ç§é’¥å¯¼å‡ºå…¬é’¥å¤±è´¥: %w", err)
	}

	isValid := s.signatureManager.Verify(hashResp.Hash, signature, publicKey)
	if !isValid {
		return nil, fmt.Errorf("ç­¾åè‡ªæˆ‘éªŒè¯å¤±è´¥")
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("âœ… äº¤æ˜“ç­¾åè®¡ç®—æˆåŠŸ - ç­¾åé•¿åº¦: %då­—èŠ‚", len(signature)))
	}

	return signature, nil
}

// addSignatureToTransaction æ·»åŠ ç­¾ååˆ°äº¤æ˜“
//
// ğŸ“ **ç­¾åé™„åŠ å™¨**
//
// å°†è®¡ç®—å‡ºçš„ç­¾åæ·»åŠ åˆ°äº¤æ˜“çš„ç›¸åº”è¾“å…¥ä¸­ã€‚
//
// å‚æ•°ï¼š
//   - tx: äº¤æ˜“å¯¹è±¡
//   - privateKey: ç§é’¥ï¼ˆç”¨äºç¡®å®šç­¾åä½ç½®ï¼‰
//
// è¿”å›ï¼š
//   - error: æ·»åŠ é”™è¯¯
func (s *TransactionSignService) addSignatureToTransaction(
	ctx context.Context,
	tx *transaction.Transaction,
	privateKey []byte,
) error {
	if s.logger != nil {
		s.logger.Debug("æ·»åŠ ç­¾ååˆ°äº¤æ˜“")
	}

	// âš¡ è®¾ç½®æ­£ç¡®çš„Nonceï¼ˆå…³é”®å¥‘çº¦å®ç°ï¼‰
	if err := s.setTransactionNonce(tx); err != nil {
		return fmt.Errorf("è®¾ç½®äº¤æ˜“Nonceå¤±è´¥: %v", err)
	}

	// ä¸ºæ¯ä¸ªè¾“å…¥æŒ‰ç…§UTXOé”å®šæ¡ä»¶æ·»åŠ æ­£ç¡®çš„ç­¾åè¯æ˜
	for i, input := range tx.Inputs {
		if input == nil {
			continue
		}

		// è·å–è¾“å…¥å¯¹åº”çš„UTXOé”å®šæ¡ä»¶
		utxo, err := s.utxoManager.GetUTXO(ctx, input.PreviousOutput)
		if err != nil || utxo == nil {
			return fmt.Errorf("æ— æ³•è·å–è¾“å…¥%då¯¹åº”çš„UTXO: %v", i, err)
		}

		// æ£€æŸ¥é”å®šæ¡ä»¶ç±»å‹ï¼Œå†³å®šå¦‚ä½•æ·»åŠ ç­¾å
		if err := s.addSignatureForInput(ctx, tx, i, privateKey, utxo); err != nil {
			return fmt.Errorf("ä¸ºè¾“å…¥%dæ·»åŠ ç­¾åå¤±è´¥: %w", i, err)
		}

		if s.logger != nil {
			s.logger.Debug(fmt.Sprintf("âœ… è¾“å…¥%dç­¾åæ·»åŠ å®Œæˆ", i))
		}
	}

	if s.logger != nil {
		s.logger.Info(fmt.Sprintf("âœ… ç­¾åæ·»åŠ å®Œæˆ - Nonce: %d, è¾“å…¥æ•°é‡: %d", tx.Nonce, len(tx.Inputs)))
	}

	return nil
}

// addSignatureForInput ä¸ºæŒ‡å®šè¾“å…¥æŒ‰UTXOé”å®šæ¡ä»¶æ·»åŠ æ­£ç¡®ç­¾å
//
// ğŸ” **æŒ‰é”å®šæ¡ä»¶ç±»å‹åˆ†å‘ç­¾åé€»è¾‘**
//
// æ ¹æ®UTXOçš„é”å®šæ¡ä»¶ç±»å‹å†³å®šå¦‚ä½•æ·»åŠ ç­¾åè¯æ˜ã€‚
// åªå¤„ç†SingleKeyLockï¼Œå…¶ä»–ç±»å‹è¦æ±‚èµ°ä¸“ç”¨æµç¨‹ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: äº¤æ˜“å¯¹è±¡
//   - inputIndex: è¾“å…¥ç´¢å¼•
//   - privateKey: ç§é’¥
//   - utxo: å¯¹åº”çš„UTXO
//
// è¿”å›ï¼š
//   - error: ç­¾åæ·»åŠ é”™è¯¯
func (s *TransactionSignService) addSignatureForInput(
	ctx context.Context,
	tx *transaction.Transaction,
	inputIndex int,
	privateKey []byte,
	utxo *utxo.UTXO,
) error {
	// æ£€æŸ¥UTXOæ˜¯å¦æœ‰ç¼“å­˜çš„è¾“å‡º
	if utxo.GetCachedOutput() == nil {
		return fmt.Errorf("è¾“å…¥%dçš„UTXOæ²¡æœ‰ç¼“å­˜è¾“å‡ºï¼Œæ— æ³•è·å–é”å®šæ¡ä»¶", inputIndex)
	}

	// åˆ†æé”å®šæ¡ä»¶ç±»å‹
	cachedOutput := utxo.GetCachedOutput()
	if len(cachedOutput.LockingConditions) == 0 {
		return fmt.Errorf("è¾“å…¥%dçš„UTXOæ²¡æœ‰é”å®šæ¡ä»¶", inputIndex)
	}

	// éå†é”å®šæ¡ä»¶ï¼Œæ‰¾åˆ°ç¬¬ä¸€ä¸ªå¯å¤„ç†çš„ç±»å‹
	for _, lockingCondition := range cachedOutput.LockingConditions {
		switch lockingCondition.Condition.(type) {
		case *transaction.LockingCondition_SingleKeyLock:
			// å¤„ç†å•å¯†é’¥é”å®š - å¯ä»¥åœ¨æ­¤æœåŠ¡ä¸­å¤„ç†
			return s.addSingleKeySignature(ctx, tx, inputIndex, privateKey, lockingCondition.GetSingleKeyLock())

		case *transaction.LockingCondition_MultiKeyLock:
			// å¤šé‡ç­¾åéœ€è¦èµ°ä¸“ç”¨çš„å¤šç­¾ä¼šè¯æµç¨‹
			return fmt.Errorf("è¾“å…¥%dä½¿ç”¨MultiKeyLocké”å®šï¼Œè¯·ä½¿ç”¨å¤šç­¾ä¼šè¯åŠŸèƒ½(CreateMultiSigSession)", inputIndex)

		case *transaction.LockingCondition_ContractLock:
			// åˆçº¦é”å®šéœ€è¦èµ°åˆçº¦æ‰§è¡Œæµç¨‹
			return fmt.Errorf("è¾“å…¥%dä½¿ç”¨ContractLocké”å®šï¼Œè¯·ä½¿ç”¨åˆçº¦æ‰§è¡Œæµç¨‹", inputIndex)

		case *transaction.LockingCondition_DelegationLock:
			// å§”æ‰˜é”å®šéœ€è¦èµ°ä¸“ç”¨çš„å§”æ‰˜æˆæƒæµç¨‹
			return fmt.Errorf("è¾“å…¥%dä½¿ç”¨DelegationLocké”å®šï¼Œè¯·ä½¿ç”¨å§”æ‰˜æˆæƒæµç¨‹", inputIndex)

		case *transaction.LockingCondition_ThresholdLock:
			// é—¨é™ç­¾åéœ€è¦èµ°ä¸“ç”¨çš„é—¨é™ç­¾åæµç¨‹
			return fmt.Errorf("è¾“å…¥%dä½¿ç”¨ThresholdLocké”å®šï¼Œè¯·ä½¿ç”¨é—¨é™ç­¾åæµç¨‹", inputIndex)

		case *transaction.LockingCondition_TimeLock,
			*transaction.LockingCondition_HeightLock:
			// æ—¶é—´é”å’Œé«˜åº¦é”éœ€è¦æ£€æŸ¥è§£é”æ¡ä»¶å¹¶é€’å½’å¤„ç†åŸºç¡€é”
			return fmt.Errorf("è¾“å…¥%dä½¿ç”¨æ—¶é—´/é«˜åº¦é”å®šï¼Œæš‚ä¸æ”¯æŒï¼Œéœ€è¦ä¸“ç”¨è§£é”é€»è¾‘", inputIndex)

		default:
			return fmt.Errorf("è¾“å…¥%dä½¿ç”¨ä¸æ”¯æŒçš„é”å®šæ¡ä»¶ç±»å‹: %T", inputIndex, lockingCondition.Condition)
		}
	}

	return fmt.Errorf("è¾“å…¥%dæ²¡æœ‰æ‰¾åˆ°å¯å¤„ç†çš„é”å®šæ¡ä»¶", inputIndex)
}

// addSingleKeySignature ä¸ºå•å¯†é’¥é”å®šæ·»åŠ ç­¾åè¯æ˜
//
// ğŸ” **å•å¯†é’¥ç­¾åä¸“ç”¨å¤„ç†å™¨**
//
// éªŒè¯ç§é’¥æƒé™å¹¶æ·»åŠ SingleKeyProofã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: äº¤æ˜“å¯¹è±¡
//   - inputIndex: è¾“å…¥ç´¢å¼•
//   - privateKey: ç§é’¥
//   - singleKeyLock: å•å¯†é’¥é”å®šæ¡ä»¶
//
// è¿”å›ï¼š
//   - error: ç­¾åæ·»åŠ é”™è¯¯
func (s *TransactionSignService) addSingleKeySignature(
	ctx context.Context,
	tx *transaction.Transaction,
	inputIndex int,
	privateKey []byte,
	singleKeyLock *transaction.SingleKeyLock,
) error {
	// 1. ä»ç§é’¥æ¨å¯¼å…¬é’¥
	publicKey, err := s.keyManager.DerivePublicKey(privateKey)
	if err != nil {
		return fmt.Errorf("ä»ç§é’¥å¯¼å‡ºå…¬é’¥å¤±è´¥: %w", err)
	}

	// 2. éªŒè¯ç§é’¥æ˜¯å¦æœ‰æƒç­¾åæ­¤è¾“å…¥
	switch keyReq := singleKeyLock.KeyRequirement.(type) {
	case *transaction.SingleKeyLock_RequiredPublicKey:
		// P2PKæ¨¡å¼ï¼šç›´æ¥æ¯”è¾ƒå…¬é’¥
		if !bytes.Equal(publicKey, keyReq.RequiredPublicKey.Value) {
			return fmt.Errorf("ç§é’¥å¯¹åº”çš„å…¬é’¥ä¸åŒ¹é…é”å®šæ¡ä»¶")
		}
	case *transaction.SingleKeyLock_RequiredAddressHash:
		// P2PKHæ¨¡å¼ï¼šè®¡ç®—åœ°å€å“ˆå¸Œå¹¶æ¯”è¾ƒ
		address, err := s.addressManager.PublicKeyToAddress(publicKey)
		if err != nil {
			return fmt.Errorf("ä»å…¬é’¥è®¡ç®—åœ°å€å¤±è´¥: %w", err)
		}
		addressBytes, err := s.addressManager.AddressToBytes(address)
		if err != nil {
			return fmt.Errorf("åœ°å€è½¬å­—èŠ‚å¤±è´¥: %w", err)
		}
		if !bytes.Equal(addressBytes, keyReq.RequiredAddressHash) {
			return fmt.Errorf("ç§é’¥å¯¹åº”çš„åœ°å€å“ˆå¸Œä¸åŒ¹é…é”å®šæ¡ä»¶")
		}
	default:
		return fmt.Errorf("ä¸æ”¯æŒçš„é”å®šæ¡ä»¶ç±»å‹: %T", keyReq)
	}

	// 3. æ„é€ è¾“å…¥çº§ç­¾åæ¶ˆæ¯
	sigHashType := types.SignatureHashType(singleKeyLock.SighashType)
	signatureMessage, err := s.constructSignatureMessage(ctx, tx, inputIndex, sigHashType)
	if err != nil {
		return fmt.Errorf("æ„é€ ç­¾åæ¶ˆæ¯å¤±è´¥: %w", err)
	}

	// 4. è®¡ç®—ç­¾åå“ˆå¸Œ
	hashReq := &transaction.ComputeHashRequest{
		Transaction:      signatureMessage,
		IncludeDebugInfo: false,
	}

	hashResp, err := s.txHashService.ComputeHash(ctx, hashReq)
	if err != nil {
		return fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// 5. è®¡ç®—ç­¾å
	signature, err := s.signatureManager.SignTransaction(hashResp.Hash, privateKey, sigHashType)
	if err != nil {
		return fmt.Errorf("äº¤æ˜“ç­¾åå¤±è´¥: %w", err)
	}

	// 6. éªŒè¯ç­¾åæ­£ç¡®æ€§
	isValid := s.signatureManager.VerifyTransactionSignature(hashResp.Hash, signature, publicKey, sigHashType)
	if !isValid {
		return fmt.Errorf("ç­¾åè‡ªæˆ‘éªŒè¯å¤±è´¥")
	}

	// 7. æ·»åŠ åˆ°äº¤æ˜“è¾“å…¥
	tx.Inputs[inputIndex].UnlockingProof = &transaction.TxInput_SingleKeyProof{
		SingleKeyProof: &transaction.SingleKeyProof{
			Signature: &transaction.SignatureData{
				Value: signature,
			},
			PublicKey: &transaction.PublicKey{
				Value: publicKey,
			},
			Algorithm:   singleKeyLock.RequiredAlgorithm,
			SighashType: singleKeyLock.SighashType,
		},
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("âœ… ä¸ºè¾“å…¥%dæ·»åŠ å•å¯†é’¥ç­¾å: %x", inputIndex, signature[:8]))
	}

	return nil
}

// constructSignatureMessage æ„é€ è¾“å…¥çº§ç­¾åæ¶ˆæ¯
//
// ğŸ” **SIGHASHæ¶ˆæ¯æ„é€ å™¨**
//
// æ ¹æ®Bitcoin SIGHASHæ ‡å‡†æ„é€ ç‰¹å®šè¾“å…¥çš„ç­¾åæ¶ˆæ¯ã€‚
//
// ğŸ¯ **SIGHASHç±»å‹å¤„ç†**ï¼š
// - SIGHASH_ALL: ç­¾åæ‰€æœ‰è¾“å…¥å’Œè¾“å‡º
// - SIGHASH_NONE: ç­¾åæ‰€æœ‰è¾“å…¥ï¼Œä¸ç­¾åä»»ä½•è¾“å‡º
// - SIGHASH_SINGLE: ç­¾åæ‰€æœ‰è¾“å…¥å’Œå¯¹åº”ç´¢å¼•çš„è¾“å‡º
// - SIGHASH_ANYONECANPAY: åªç­¾åå½“å‰è¾“å…¥
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: åŸå§‹äº¤æ˜“
//   - inputIndex: å½“å‰éªŒè¯çš„è¾“å…¥ç´¢å¼•
//   - sighashType: ç­¾åå“ˆå¸Œç±»å‹
//
// è¿”å›ï¼š
//   - *transaction.Transaction: æ„é€ çš„ç­¾åæ¶ˆæ¯äº¤æ˜“
//   - error: æ„é€ é”™è¯¯
func (s *TransactionSignService) constructSignatureMessage(
	ctx context.Context,
	tx *transaction.Transaction,
	inputIndex int,
	sighashType types.SignatureHashType,
) (*transaction.Transaction, error) {
	if tx == nil {
		return nil, fmt.Errorf("äº¤æ˜“ä¸èƒ½ä¸ºç©º")
	}
	if inputIndex < 0 || inputIndex >= len(tx.Inputs) {
		return nil, fmt.Errorf("è¾“å…¥ç´¢å¼•æ— æ•ˆ: %d", inputIndex)
	}

	// åˆ›å»ºç­¾åäº¤æ˜“çš„å‰¯æœ¬
	sigTx := &transaction.Transaction{
		Version:                  tx.Version,
		Nonce:                    tx.Nonce,
		CreationTimestamp:        tx.CreationTimestamp,
		ChainId:                  tx.ChainId,
		ValidityWindow:           tx.ValidityWindow,
		FeeMechanism:             tx.FeeMechanism,
		Metadata:                 tx.Metadata,
		ResourceAttachmentHashes: tx.ResourceAttachmentHashes,
	}

	// æ ¹æ®SIGHASHç±»å‹æ„é€ è¾“å…¥
	sigTx.Inputs = make([]*transaction.TxInput, 0)

	if sighashType&types.SigHashAnyoneCanPay != 0 {
		// ANYONECANPAY: åªåŒ…å«å½“å‰è¾“å…¥
		currentInput := tx.Inputs[inputIndex]
		sigInput := &transaction.TxInput{
			PreviousOutput:  currentInput.PreviousOutput,
			IsReferenceOnly: currentInput.IsReferenceOnly,
			Sequence:        currentInput.Sequence,
			// æ³¨æ„ï¼šä¸åŒ…å«unlocking_proofï¼Œå› ä¸ºè¿™æ˜¯è¦ç­¾åçš„éƒ¨åˆ†
		}
		sigTx.Inputs = append(sigTx.Inputs, sigInput)
	} else {
		// åŒ…å«æ‰€æœ‰è¾“å…¥ï¼Œä½†æ¸…ç©ºunlocking_proof
		for _, input := range tx.Inputs {
			sigInput := &transaction.TxInput{
				PreviousOutput:  input.PreviousOutput,
				IsReferenceOnly: input.IsReferenceOnly,
				Sequence:        input.Sequence,
			}

			// å¯¹äºå½“å‰éªŒè¯çš„è¾“å…¥ï¼Œéœ€è¦åœ¨ç­¾åæ¶ˆæ¯ä¸­åæ˜ é”å®šæ¡ä»¶çº¦æŸ
			// æ³¨æ„ï¼šé”å®šæ¡ä»¶ä¸åº”æ··å…¥unlocking_proofä¸­ï¼Œè¿™é‡Œä¿æŒè¾“å…¥ç»“æ„æ¸…æ´
			// Bitcoin SIGHASHæ ‡å‡†é€šè¿‡äº¤æ˜“ç»“æ„æœ¬èº«ï¼ˆè€Œéunlocking_proofï¼‰æ¥åŒ…å«é”å®šçº¦æŸ

			sigTx.Inputs = append(sigTx.Inputs, sigInput)
		}
	}

	// æ ¹æ®SIGHASHç±»å‹æ„é€ è¾“å‡º
	baseType := sighashType & 0x1F // è·å–åŸºç¡€ç±»å‹ï¼ˆå»æ‰ANYONECANPAYæ ‡å¿—ï¼‰

	switch baseType {
	case types.SigHashAll:
		// SIGHASH_ALL: åŒ…å«æ‰€æœ‰è¾“å‡º
		sigTx.Outputs = make([]*transaction.TxOutput, len(tx.Outputs))
		copy(sigTx.Outputs, tx.Outputs)

	case types.SigHashNone:
		// SIGHASH_NONE: ä¸åŒ…å«ä»»ä½•è¾“å‡º
		sigTx.Outputs = make([]*transaction.TxOutput, 0)

	case types.SigHashSingle:
		// SIGHASH_SINGLE: åªåŒ…å«å¯¹åº”ç´¢å¼•çš„è¾“å‡º
		if inputIndex < len(tx.Outputs) {
			sigTx.Outputs = []*transaction.TxOutput{tx.Outputs[inputIndex]}
		} else {
			sigTx.Outputs = make([]*transaction.TxOutput, 0)
		}

	default:
		return nil, fmt.Errorf("ä¸æ”¯æŒçš„SIGHASHç±»å‹: %v", sighashType)
	}

	return sigTx, nil
}

// setTransactionNonce è®¾ç½®äº¤æ˜“çš„æ­£ç¡®nonceå€¼
//
// âš¡ **Nonceè®¾ç½®æ ¸å¿ƒå®ç°**
//
// ä¸ºäº¤æ˜“è®¾ç½®æ­£ç¡®çš„nonceå€¼ï¼Œç¡®ä¿é˜²é‡æ”¾æ”»å‡»ä¿æŠ¤
//
// âš¡ **Nonceè®¾ç½®æ ¸å¿ƒå®ç°**
//
// ä¸ºäº¤æ˜“è®¾ç½®æ­£ç¡®çš„nonceå€¼ï¼Œç¡®ä¿é˜²é‡æ”¾æ”»å‡»ä¿æŠ¤
//
// å‚æ•°ï¼š
//   - tx: äº¤æ˜“å¯¹è±¡
//
// è¿”å›ï¼š
//   - error: è®¾ç½®é”™è¯¯
func (s *TransactionSignService) setTransactionNonce(tx *transaction.Transaction) error {
	if tx == nil {
		return fmt.Errorf("äº¤æ˜“å¯¹è±¡ä¸èƒ½ä¸ºç©º")
	}

	// å½“å‰ç®€åŒ–å®ç°ï¼šä½¿ç”¨æ—¶é—´æˆ³ä½œä¸ºnonce
	// ç”Ÿäº§ç¯å¢ƒåº”è¯¥ä»account nonceæœåŠ¡è·å–æ­£ç¡®çš„é€’å¢åºå·
	nonce := uint64(time.Now().UnixNano())
	tx.Nonce = nonce

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("âœ… è®¾ç½®äº¤æ˜“Nonce: %d", nonce))
	}

	return nil
}

// computeSignedTransactionHash è®¡ç®—ç­¾ååçš„äº¤æ˜“å“ˆå¸Œ
//
// ğŸ” **å®Œæ•´å“ˆå¸Œè®¡ç®—å™¨**
//
// è®¡ç®—åŒ…å«ç­¾åçš„å®Œæ•´äº¤æ˜“å“ˆå¸Œã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: å·²ç­¾åçš„äº¤æ˜“å¯¹è±¡
//
// è¿”å›ï¼š
//   - []byte: å®Œæ•´äº¤æ˜“å“ˆå¸Œ
//   - error: è®¡ç®—é”™è¯¯
func (s *TransactionSignService) computeSignedTransactionHash(
	ctx context.Context,
	tx *transaction.Transaction,
) ([]byte, error) {
	if s.logger != nil {
		s.logger.Debug("è®¡ç®—ç­¾ååçš„äº¤æ˜“å“ˆå¸Œ")
	}

	// ä½¿ç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡è®¡ç®—åŒ…å«ç­¾åçš„å®Œæ•´å“ˆå¸Œ
	hashReq := &transaction.ComputeHashRequest{
		Transaction:      tx,
		IncludeDebugInfo: false,
	}

	hashResp, err := s.txHashService.ComputeHash(ctx, hashReq)
	if err != nil {
		return nil, fmt.Errorf("è°ƒç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡å¤±è´¥: %w", err)
	}

	if !hashResp.IsValid {
		return nil, fmt.Errorf("ç­¾åäº¤æ˜“ç»“æ„æ— æ•ˆ")
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("âœ… è®¡ç®—äº¤æ˜“å“ˆå¸ŒæˆåŠŸ: %x", hashResp.Hash[:8]))
	}

	return hashResp.Hash, nil
}

// updateTransactionCache æ›´æ–°äº¤æ˜“ç¼“å­˜
//
// ğŸ’¾ **ç¼“å­˜æ›´æ–°å™¨**
//
// æ›´æ–°ç¼“å­˜ä¸­çš„äº¤æ˜“ï¼Œå°†æœªç­¾åå“ˆå¸Œæ›¿æ¢ä¸ºå·²ç­¾åå“ˆå¸Œã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - oldHash: æœªç­¾åäº¤æ˜“å“ˆå¸Œ
//   - newHash: å·²ç­¾åäº¤æ˜“å“ˆå¸Œ
//   - tx: å·²ç­¾åäº¤æ˜“å¯¹è±¡
//
// è¿”å›ï¼š
//   - error: æ›´æ–°é”™è¯¯
func (s *TransactionSignService) updateTransactionCache(
	ctx context.Context,
	oldHash []byte,
	newHash []byte,
	tx *transaction.Transaction,
) error {
	if s.logger != nil {
		s.logger.Debug("æ›´æ–°äº¤æ˜“ç¼“å­˜")
	}

	// ä½¿ç”¨å†…éƒ¨ç¼“å­˜å·¥å…·æ›´æ–°äº¤æ˜“ç¼“å­˜
	cacheConfig := internal.GetDefaultCacheConfig()

	// ç¼“å­˜å·²ç­¾åäº¤æ˜“
	err := internal.CacheSignedTransaction(ctx, s.memoryStore, newHash, tx, cacheConfig, s.logger)
	if err != nil {
		return fmt.Errorf("ç¼“å­˜å·²ç­¾åäº¤æ˜“å¤±è´¥: %v", err)
	}

	// åˆ é™¤æœªç­¾åäº¤æ˜“ç¼“å­˜ï¼ˆå¯é€‰ï¼ŒèŠ‚çœå†…å­˜ï¼‰
	oldCacheKey := internal.GenerateCacheKey(internal.UnsignedTxPrefix, oldHash)
	err = s.memoryStore.Delete(ctx, oldCacheKey)
	if err != nil && s.logger != nil {
		// åˆ é™¤å¤±è´¥ä¸æ˜¯è‡´å‘½é”™è¯¯ï¼Œåªè®°å½•è­¦å‘Š
		s.logger.Warn(fmt.Sprintf("åˆ é™¤æœªç­¾åäº¤æ˜“ç¼“å­˜å¤±è´¥: %v", err))
	}

	return nil
}

// validatePrivateKey éªŒè¯ç§é’¥
//
// âœ… **ç§é’¥éªŒè¯å™¨**
//
// éªŒè¯ç§é’¥çš„æ ¼å¼å’Œæœ‰æ•ˆæ€§ã€‚
//
// å‚æ•°ï¼š
//   - privateKey: ç§é’¥æ•°æ®
//
// è¿”å›ï¼š
//   - error: éªŒè¯é”™è¯¯
func (s *TransactionSignService) validatePrivateKey(privateKey []byte) error {
	if s.logger != nil {
		s.logger.Debug("éªŒè¯ç§é’¥")
	}

	// åŸºç¡€éªŒè¯
	if len(privateKey) == 0 {
		return fmt.Errorf("ç§é’¥ä¸èƒ½ä¸ºç©º")
	}

	// å¸¸è§çš„ç§é’¥é•¿åº¦éªŒè¯
	switch len(privateKey) {
	case 32: // ECDSA secp256k1
		// æœ‰æ•ˆé•¿åº¦
	case 64: // EdDSAç­‰
		// æœ‰æ•ˆé•¿åº¦
	default:
		return fmt.Errorf("æ— æ•ˆçš„ç§é’¥é•¿åº¦: %dï¼Œæ”¯æŒ32æˆ–64å­—èŠ‚", len(privateKey))
	}

	// ä½¿ç”¨å¯†é’¥ç®¡ç†å™¨è¿›è¡Œä¸¥æ ¼éªŒè¯
	return s.keyManager.ValidatePrivateKey(privateKey)
}

// derivePublicKey ä»ç§é’¥æ¨å¯¼å…¬é’¥
//
// ğŸ”‘ **å…¬é’¥æ¨å¯¼å™¨**
//
// ä»ç§é’¥æ¨å¯¼å‡ºå¯¹åº”çš„å…¬é’¥ã€‚
//
// å‚æ•°ï¼š
//   - privateKey: ç§é’¥
//
// è¿”å›ï¼š
//   - []byte: å…¬é’¥
//   - error: æ¨å¯¼é”™è¯¯
func (s *TransactionSignService) derivePublicKey(privateKey []byte) ([]byte, error) {
	if s.logger != nil {
		s.logger.Debug("ä»ç§é’¥æ¨å¯¼å…¬é’¥")
	}

	// åŸºç¡€éªŒè¯
	if len(privateKey) == 0 {
		return nil, fmt.Errorf("ç§é’¥ä¸èƒ½ä¸ºç©º")
	}

	// ä½¿ç”¨å¯†é’¥ç®¡ç†å™¨æ¨å¯¼å…¬é’¥
	publicKey, err := s.keyManager.DerivePublicKey(privateKey)
	if err != nil {
		return nil, fmt.Errorf("å¯†é’¥ç®¡ç†å™¨æ¨å¯¼å…¬é’¥å¤±è´¥: %w", err)
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("âœ… å…¬é’¥æ¨å¯¼æˆåŠŸ - é•¿åº¦: %då­—èŠ‚", len(publicKey)))
	}

	return publicKey, nil
}

// ============================================================================
//
//	ç¼–è¯‘æ—¶æ¥å£æ£€æŸ¥
//
// ============================================================================
// validateSignature éªŒè¯ç­¾å
//
// âœ… **ç­¾åéªŒè¯å™¨**
//
// éªŒè¯è®¡ç®—å‡ºçš„ç­¾åæ˜¯å¦æœ‰æ•ˆã€‚
//
// å‚æ•°ï¼š
//   - tx: äº¤æ˜“å¯¹è±¡
//   - signature: ç­¾åæ•°æ®
//   - publicKey: å…¬é’¥
//
// è¿”å›ï¼š
//   - bool: éªŒè¯ç»“æœ
//   - error: éªŒè¯é”™è¯¯
func (s *TransactionSignService) validateSignature(
	ctx context.Context,
	tx *transaction.Transaction,
	signature, publicKey []byte,
) (bool, error) {
	if s.logger != nil {
		s.logger.Debug("éªŒè¯ç­¾å")
	}

	// åŸºç¡€å‚æ•°éªŒè¯
	if len(signature) == 0 || len(publicKey) == 0 {
		return false, fmt.Errorf("ç­¾åæˆ–å…¬é’¥ä¸èƒ½ä¸ºç©º")
	}

	// ä½¿ç”¨äº¤æ˜“å“ˆå¸ŒæœåŠ¡è®¡ç®—äº¤æ˜“å“ˆå¸Œ
	hashReq := &transaction.ComputeHashRequest{
		Transaction:      tx,
		IncludeDebugInfo: false,
	}

	hashResp, err := s.txHashService.ComputeHash(ctx, hashReq)
	if err != nil {
		return false, fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %w", err)
	}

	// ä½¿ç”¨ç­¾åç®¡ç†å™¨è¿›è¡ŒéªŒè¯
	isValid := s.signatureManager.Verify(hashResp.Hash, signature, publicKey)

	if s.logger != nil {
		if isValid {
			s.logger.Debug("âœ… ç­¾åéªŒè¯é€šè¿‡")
		} else {
			s.logger.Debug("âŒ ç­¾åéªŒè¯å¤±è´¥")
		}
	}

	return isValid, nil
}

// ============================================================================
//                              ç¼–è¯‘æ—¶æ¥å£æ£€æŸ¥
// ============================================================================

// ç¡®ä¿ TransactionSignService å®ç°äº†æ‰€éœ€çš„æ¥å£éƒ¨åˆ†
var _ interface {
	SignTransaction(context.Context, []byte, []byte) ([]byte, error)
} = (*TransactionSignService)(nil)
