package hostabi

import (
	"bytes"
	"context"
	"encoding/json"
	"strings"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"

	pb "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"google.golang.org/protobuf/proto"
)

// ============================================================================
// host_build_transaction.go æœ€ç»ˆè¦†ç›–ç‡æå‡æµ‹è¯•
// ============================================================================
//
// ğŸ¯ **æµ‹è¯•ç›®çš„**ï¼šæé«˜è¦†ç›–ç‡åˆ°80%+ï¼Œå‘ç°æœªè¦†ç›–çš„ä»£ç è·¯å¾„ä¸­çš„ç¼ºé™·å’ŒBUG
//
// ============================================================================

// TestEncodeTxReceipt_Error æµ‹è¯•ç¼–ç é”™è¯¯ï¼ˆæ¨¡æ‹ŸJSON Marshalå¤±è´¥ï¼‰
func TestEncodeTxReceipt_Error(t *testing.T) {
	// åˆ›å»ºä¸€ä¸ªä¼šå¯¼è‡´JSON Marshalå¤±è´¥çš„TxReceipt
	// æ³¨æ„ï¼šåœ¨Goä¸­ï¼ŒJSON Marshalå¾ˆå°‘å¤±è´¥ï¼Œä½†æˆ‘ä»¬å¯ä»¥æµ‹è¯•é”™è¯¯å¤„ç†è·¯å¾„
	receipt := &TxReceipt{
		Mode:           "unsigned",
		UnsignedTxHash: "test",
		SerializedTx:   "test",
	}

	// æ­£å¸¸æƒ…å†µä¸‹åº”è¯¥æˆåŠŸ
	data, err := EncodeTxReceipt(receipt)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸç¼–ç ")
	assert.NotNil(t, data, "åº”è¯¥è¿”å›æ•°æ®")

	// éªŒè¯å¯ä»¥è§£ç 
	var decoded TxReceipt
	err = json.Unmarshal(data, &decoded)
	assert.NoError(t, err, "åº”è¯¥å¯ä»¥è§£ç ")
}

// TestBuildTxOutputFromSpec_WithLockingConditions æµ‹è¯•å¸¦é”å®šæ¡ä»¶çš„è¾“å‡º
func TestBuildTxOutputFromSpec_WithLockingConditions(t *testing.T) {
	// åˆ›å»ºä¸€ä¸ªæœ‰æ•ˆçš„é”å®šæ¡ä»¶ï¼ˆåºåˆ—åŒ–ä¸ºprotobufï¼‰
	lockCondition := &pb.LockingCondition{
		Condition: &pb.LockingCondition_SingleKeyLock{
			SingleKeyLock: &pb.SingleKeyLock{
				KeyRequirement: &pb.SingleKeyLock_RequiredAddressHash{
					RequiredAddressHash: make([]byte, 20),
				},
				RequiredAlgorithm: pb.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
				SighashType:       pb.SignatureHashType_SIGHASH_ALL,
			},
		},
	}
	lockBytes, _ := proto.Marshal(lockCondition)
	lockHex := encodeHex(lockBytes)

	metadataJSON := `{
		"locking_conditions": "` + lockHex + `"
	}`
	spec := &OutputSpec{
		Type:     "asset",
		Owner:    "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		Amount:   "1000",
		Metadata: []byte(metadataJSON),
	}

	output, err := buildTxOutputFromSpec(spec, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»º")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.LockingConditions, "åº”è¯¥æœ‰é”å®šæ¡ä»¶")
	assert.Len(t, output.LockingConditions, 1, "åº”è¯¥æœ‰1ä¸ªé”å®šæ¡ä»¶")
}

// TestBuildTxOutputFromSpec_InvalidLockingConditionsJSON æµ‹è¯•æ— æ•ˆé”å®šæ¡ä»¶JSON
func TestBuildTxOutputFromSpec_InvalidLockingConditionsJSON(t *testing.T) {
	metadataJSON := `{invalid json}`
	spec := &OutputSpec{
		Type:     "asset",
		Owner:    "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		Amount:   "1000",
		Metadata: []byte(metadataJSON),
	}

	// åº”è¯¥ä½¿ç”¨é»˜è®¤é”å®šæ¡ä»¶ï¼ˆå› ä¸ºJSONè§£æå¤±è´¥ï¼‰
	output, err := buildTxOutputFromSpec(spec, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºï¼ˆä½¿ç”¨é»˜è®¤é”å®šæ¡ä»¶ï¼‰")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.LockingConditions, "åº”è¯¥æœ‰é»˜è®¤é”å®šæ¡ä»¶")
}

// TestBuildTxOutputFromSpec_InvalidLockingConditionsProto æµ‹è¯•æ— æ•ˆé”å®šæ¡ä»¶protobuf
func TestBuildTxOutputFromSpec_InvalidLockingConditionsProto(t *testing.T) {
	metadataJSON := `{
		"locking_conditions": "invalid_proto_hex"
	}`
	spec := &OutputSpec{
		Type:     "asset",
		Owner:    "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		Amount:   "1000",
		Metadata: []byte(metadataJSON),
	}

	// åº”è¯¥ä½¿ç”¨é»˜è®¤é”å®šæ¡ä»¶ï¼ˆå› ä¸ºprotobufè§£æå¤±è´¥ï¼‰
	output, err := buildTxOutputFromSpec(spec, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºï¼ˆä½¿ç”¨é»˜è®¤é”å®šæ¡ä»¶ï¼‰")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.LockingConditions, "åº”è¯¥æœ‰é»˜è®¤é”å®šæ¡ä»¶")
}

// TestBuildTxOutputFromSpec_EmptyLockingConditions æµ‹è¯•ç©ºé”å®šæ¡ä»¶
func TestBuildTxOutputFromSpec_EmptyLockingConditions(t *testing.T) {
	metadataJSON := `{
		"locking_conditions": ""
	}`
	spec := &OutputSpec{
		Type:     "asset",
		Owner:    "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
		Amount:   "1000",
		Metadata: []byte(metadataJSON),
	}

	// åº”è¯¥ä½¿ç”¨é»˜è®¤é”å®šæ¡ä»¶ï¼ˆå› ä¸ºé”å®šæ¡ä»¶ä¸ºç©ºï¼‰
	output, err := buildTxOutputFromSpec(spec, nil)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºï¼ˆä½¿ç”¨é»˜è®¤é”å®šæ¡ä»¶ï¼‰")
	assert.NotNil(t, output, "åº”è¯¥è¿”å›è¾“å‡ºå¯¹è±¡")
	assert.NotNil(t, output.LockingConditions, "åº”è¯¥æœ‰é»˜è®¤é”å®šæ¡ä»¶")
}

func TestBuildTxOutputFromSpec_ContractTokenUsesContractLock(t *testing.T) {
	spec := &OutputSpec{
		Type:   "asset",
		Owner:  strings.Repeat("aa", 20),
		Amount: "100",
		// token_id é‡‡ç”¨ hex ç¼–ç 
		TokenID: "746f6b656e", // "token"
	}
	contractAddr := bytes.Repeat([]byte{0x11}, 20)

	output, err := buildTxOutputFromSpec(spec, contractAddr)

	assert.NoError(t, err, "åˆçº¦ä»£å¸è¾“å‡ºåº”æ„å»ºæˆåŠŸ")
	require.NotNil(t, output)
	require.Len(t, output.LockingConditions, 1)

	lock := output.LockingConditions[0].GetContractLock()
	require.NotNil(t, lock, "åˆçº¦ä»£å¸è¾“å‡ºåº”ä½¿ç”¨ ContractLock")
	assert.Equal(t, contractAddr, lock.ContractAddress, "é”å®šæ¡ä»¶ä¸­çš„åˆçº¦åœ°å€åº”åŒ¹é…")
}

// TestRouteBySignMode_DeferSign_ComputeHashError æµ‹è¯•defer_signæ¨¡å¼è®¡ç®—å“ˆå¸Œé”™è¯¯
func TestRouteBySignMode_DeferSign_ComputeHashError(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		err: assert.AnError,
	}
	ctx := context.Background()
	unsignedTx := &pb.Transaction{
		Inputs:  []*pb.TxInput{{}},
		Outputs: []*pb.TxOutput{{}},
	}

	receipt, err := routeBySignMode(ctx, mockTxHashClient, "defer_sign", unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "failed to compute transaction hash", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestRouteBySignMode_DeferSign_InvalidTransaction æµ‹è¯•defer_signæ¨¡å¼æ— æ•ˆäº¤æ˜“
func TestRouteBySignMode_DeferSign_InvalidTransaction(t *testing.T) {
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: false, // äº¤æ˜“ç»“æ„æ— æ•ˆ
	}
	ctx := context.Background()
	unsignedTx := &pb.Transaction{
		Inputs:  []*pb.TxInput{{}},
		Outputs: []*pb.TxOutput{{}},
	}

	receipt, err := routeBySignMode(ctx, mockTxHashClient, "defer_sign", unsignedTx)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "transaction structure is invalid", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_EmptyTransaction æµ‹è¯•ç©ºäº¤æ˜“ï¼ˆåªæœ‰sign_modeï¼‰
func TestBuildTransactionFromDraft_EmptyTransaction(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign"
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯ï¼ˆç©ºäº¤æ˜“ï¼‰")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "äº¤æ˜“ä¸ºç©º", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_QueryUTXOError æµ‹è¯•paymasteræ¨¡å¼æŸ¥è¯¢UTXOé”™è¯¯
func TestBuildTransactionFromDraft_QueryUTXOError(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	mockUTXOQuery := &mockUTXOQueryForPaymaster{
		queryError: assert.AnError,
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "paymaster",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}],
		"metadata": {
			"paymaster_params": {
				"fee_amount": "100"
			}
		}
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		mockUTXOQuery, // eutxoQuery
		nil,           // callerAddress
		nil,           // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "åº”ç”¨ç­¾åæ¨¡å¼é€»è¾‘å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_UTXOQueryNil æµ‹è¯•paymasteræ¨¡å¼UTXOQueryä¸ºnil
func TestBuildTransactionFromDraft_UTXOQueryNil(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "paymaster",
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}],
		"metadata": {
			"paymaster_params": {
				"fee_amount": "100"
			}
		}
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.Error(t, err, "åº”è¯¥è¿”å›é”™è¯¯")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›é”™è¯¯æ”¶æ®")
	assert.Equal(t, "error", receipt.Mode, "æ¨¡å¼åº”è¯¥æ˜¯error")
	assert.Contains(t, receipt.Error, "åº”ç”¨ç­¾åæ¨¡å¼é€»è¾‘å¤±è´¥", "é”™è¯¯ä¿¡æ¯åº”è¯¥æ­£ç¡®")
}

// TestBuildTransactionFromDraft_MultipleIntents æµ‹è¯•å¤šä¸ªæ„å›¾
func TestBuildTransactionFromDraft_MultipleIntents(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"intents": [
			{
				"type": "transfer",
				"params": {
					"from": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
					"to": "beefdeadbeefdeadbeefdeadbeefdeadbeefdead",
					"amount": "1000"
				}
			},
			{
				"type": "transfer",
				"params": {
					"from": "beefdeadbeefdeadbeefdeadbeefdeadbeefdead",
					"to": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
					"amount": "500"
				}
			}
		]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, 2, mockTxAdapter.addTransferCallCount, "åº”è¯¥å¤„ç†2ä¸ªè½¬è´¦æ„å›¾")
}

// TestBuildTransactionFromDraft_MultipleInputs æµ‹è¯•å¤šä¸ªè¾“å…¥
func TestBuildTransactionFromDraft_MultipleInputs(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"inputs": [
			{"tx_hash": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "output_index": 0},
			{"tx_hash": "beefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdead", "output_index": 1}
		]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, 2, mockTxAdapter.addCustomInputCallCount, "åº”è¯¥æ·»åŠ 2ä¸ªè¾“å…¥")
}

// TestBuildTransactionFromDraft_MultipleOutputs æµ‹è¯•å¤šä¸ªè¾“å‡º
func TestBuildTransactionFromDraft_MultipleOutputs(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"outputs": [
			{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"},
			{"type": "asset", "owner": "beefdeadbeefdeadbeefdeadbeefdeadbeefdead", "amount": "500"}
		]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, 2, mockTxAdapter.addCustomOutputCallCount, "åº”è¯¥æ·»åŠ 2ä¸ªè¾“å‡º")
}

// TestBuildTransactionFromDraft_ReferenceOnlyInput æµ‹è¯•å¼•ç”¨å‹è¾“å…¥
func TestBuildTransactionFromDraft_ReferenceOnlyInput(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"inputs": [{"tx_hash": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "output_index": 0, "is_reference_only": true}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, 1, mockTxAdapter.addCustomInputCallCount, "åº”è¯¥æ·»åŠ 1ä¸ªå¼•ç”¨å‹è¾“å…¥")
}

// TestBuildTransactionFromDraft_ComplexTransaction æµ‹è¯•å¤æ‚äº¤æ˜“ï¼ˆè¾“å…¥+è¾“å‡º+æ„å›¾ï¼‰
func TestBuildTransactionFromDraft_ComplexTransaction(t *testing.T) {
	mockTxAdapter := &mockTxAdapterForBuildTransaction{}
	mockTxHashClient := &mockTxHashServiceClient{
		hash:    make([]byte, 32),
		isValid: true,
	}
	ctx := context.Background()

	draftJSON := `{
		"sign_mode": "defer_sign",
		"inputs": [{"tx_hash": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "output_index": 0}],
		"outputs": [{"type": "asset", "owner": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef", "amount": "1000"}],
		"intents": [{
			"type": "transfer",
			"params": {
				"from": "deadbeefdeadbeefdeadbeefdeadbeefdeadbeef",
				"to": "beefdeadbeefdeadbeefdeadbeefdeadbeefdead",
				"amount": "500"
			}
		}]
	}`

	receipt, err := BuildTransactionFromDraft(
		ctx,
		mockTxAdapter,
		mockTxHashClient,
		nil, // eutxoQuery
		nil, // callerAddress
		nil, // contractAddress
		[]byte(draftJSON),
		100,
		1000,
	)

	assert.NoError(t, err, "åº”è¯¥æˆåŠŸæ„å»ºäº¤æ˜“")
	assert.NotNil(t, receipt, "åº”è¯¥è¿”å›æ”¶æ®")
	assert.Equal(t, 1, mockTxAdapter.addCustomInputCallCount, "åº”è¯¥æ·»åŠ è¾“å…¥")
	assert.Equal(t, 1, mockTxAdapter.addCustomOutputCallCount, "åº”è¯¥æ·»åŠ è¾“å‡º")
	assert.Equal(t, 1, mockTxAdapter.addTransferCallCount, "åº”è¯¥å¤„ç†æ„å›¾")
}
