// Package txpool å‹åŠ›æµ‹è¯•
//
// P2-10: äº¤æ˜“æ± å‹åŠ›æµ‹è¯•
//
// ğŸ¯ **æµ‹è¯•ç›®æ ‡**ï¼š
// - é«˜å¹¶å‘åœºæ™¯æµ‹è¯•ï¼ˆå¤šä¸ªgoroutineåŒæ—¶æäº¤äº¤æ˜“ï¼‰
// - æ€§èƒ½åŸºå‡†æµ‹è¯•ï¼ˆä½¿ç”¨testing.Bï¼‰
// - å†…å­˜å‹åŠ›æµ‹è¯•ï¼ˆå¤§é‡äº¤æ˜“ï¼‰
// - æ€§èƒ½æŒ‡æ ‡æ”¶é›†
package txpool

import (
	"context"
	"crypto/rand"
	"fmt"
	"sync"
	"sync/atomic"
	"testing"
	"time"

	"github.com/weisyn/v1/internal/config/txpool"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	mempoolIfaces "github.com/weisyn/v1/pkg/interfaces/mempool"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"google.golang.org/grpc"
	"google.golang.org/protobuf/proto"
)

// mockHashService æ¨¡æ‹Ÿå“ˆå¸ŒæœåŠ¡
type mockHashService struct{}

func (m *mockHashService) ComputeHash(ctx context.Context, in *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	if in == nil || in.Transaction == nil {
		return nil, fmt.Errorf("æ— æ•ˆçš„è¯·æ±‚")
	}
	// ç®€å•å®ç°ï¼šä½¿ç”¨äº¤æ˜“åºåˆ—åŒ–åçš„å“ˆå¸Œ
	data, _ := proto.Marshal(in.Transaction)
	hash := make([]byte, 32)
	copy(hash, data[:min(32, len(data))])
	// å¡«å……ä¸è¶³32å­—èŠ‚çš„éƒ¨åˆ†
	for i := len(data); i < 32; i++ {
		hash[i] = byte(i % 256)
	}
	return &transaction.ComputeHashResponse{
		Hash:    hash,
		IsValid: true,
	}, nil
}

func (m *mockHashService) ValidateHash(ctx context.Context, in *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	if in == nil || in.Transaction == nil {
		return nil, fmt.Errorf("æ— æ•ˆçš„è¯·æ±‚")
	}
	// ç®€å•å®ç°ï¼šè®¡ç®—å“ˆå¸Œå¹¶æ¯”è¾ƒ
	data, _ := proto.Marshal(in.Transaction)
	hash := make([]byte, 32)
	copy(hash, data[:min(32, len(data))])
	for i := len(data); i < 32; i++ {
		hash[i] = byte(i % 256)
	}
	isValid := len(in.ExpectedHash) == 32 && string(hash) == string(in.ExpectedHash)
	return &transaction.ValidateHashResponse{
		IsValid: isValid,
	}, nil
}

func (m *mockHashService) ComputeSignatureHash(ctx context.Context, in *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	if in == nil || in.Transaction == nil {
		return nil, fmt.Errorf("æ— æ•ˆçš„è¯·æ±‚")
	}
	// ç®€å•å®ç°ï¼šä½¿ç”¨äº¤æ˜“åºåˆ—åŒ–åçš„å“ˆå¸Œï¼ˆä¸è€ƒè™‘ SIGHASH ç±»å‹ï¼‰
	data, _ := proto.Marshal(in.Transaction)
	hash := make([]byte, 32)
	copy(hash, data[:min(32, len(data))])
	// å¡«å……ä¸è¶³32å­—èŠ‚çš„éƒ¨åˆ†
	for i := len(data); i < 32; i++ {
		hash[i] = byte(i % 256)
	}
	return &transaction.ComputeSignatureHashResponse{
		Hash:    hash,
		IsValid: true,
	}, nil
}

func (m *mockHashService) ValidateSignatureHash(ctx context.Context, in *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	if in == nil || in.Transaction == nil {
		return nil, fmt.Errorf("æ— æ•ˆçš„è¯·æ±‚")
	}
	// ç®€å•å®ç°ï¼šè®¡ç®—ç­¾åå“ˆå¸Œå¹¶æ¯”è¾ƒ
	data, _ := proto.Marshal(in.Transaction)
	hash := make([]byte, 32)
	copy(hash, data[:min(32, len(data))])
	for i := len(data); i < 32; i++ {
		hash[i] = byte(i % 256)
	}
	isValid := len(in.ExpectedHash) == 32 && string(hash) == string(in.ExpectedHash)
	return &transaction.ValidateSignatureHashResponse{
		IsValid: isValid,
	}, nil
}

// mockMemoryStore æ¨¡æ‹Ÿå†…å­˜å­˜å‚¨
type mockMemoryStore struct {
	data map[string][]byte
	mu   sync.RWMutex
}

func newMockMemoryStore() storage.MemoryStore {
	return &mockMemoryStore{
		data: make(map[string][]byte),
	}
}

func (m *mockMemoryStore) Get(ctx context.Context, key string) ([]byte, bool, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	val, ok := m.data[key]
	return val, ok, nil
}

func (m *mockMemoryStore) Set(ctx context.Context, key string, value []byte, ttl time.Duration) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	m.data[key] = value
	return nil
}

func (m *mockMemoryStore) Delete(ctx context.Context, key string) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	delete(m.data, key)
	return nil
}

func (m *mockMemoryStore) Exists(ctx context.Context, key string) (bool, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	_, ok := m.data[key]
	return ok, nil
}

func (m *mockMemoryStore) GetMany(ctx context.Context, keys []string) (map[string][]byte, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	result := make(map[string][]byte)
	for _, key := range keys {
		if val, ok := m.data[key]; ok {
			result[key] = val
		}
	}
	return result, nil
}

func (m *mockMemoryStore) SetMany(ctx context.Context, items map[string][]byte, ttl time.Duration) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	for k, v := range items {
		m.data[k] = v
	}
	return nil
}

func (m *mockMemoryStore) DeleteMany(ctx context.Context, keys []string) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	for _, key := range keys {
		delete(m.data, key)
	}
	return nil
}

func (m *mockMemoryStore) Clear(ctx context.Context) error {
	m.mu.Lock()
	defer m.mu.Unlock()
	m.data = make(map[string][]byte)
	return nil
}

func (m *mockMemoryStore) DeleteByPattern(ctx context.Context, pattern string) (int64, error) {
	// ç®€åŒ–å®ç°ï¼šä¸æ”¯æŒæ¨¡å¼åŒ¹é…
	return 0, nil
}

func (m *mockMemoryStore) GetKeys(ctx context.Context, pattern string) ([]string, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	keys := make([]string, 0, len(m.data))
	for k := range m.data {
		keys = append(keys, k)
	}
	return keys, nil
}

func (m *mockMemoryStore) GetTTL(ctx context.Context, key string) (time.Duration, error) {
	return 0, nil
}

func (m *mockMemoryStore) UpdateTTL(ctx context.Context, key string, ttl time.Duration) error {
	return nil
}

func (m *mockMemoryStore) Count(ctx context.Context) (int64, error) {
	m.mu.RLock()
	defer m.mu.RUnlock()
	return int64(len(m.data)), nil
}

// createTestTransaction åˆ›å»ºæµ‹è¯•äº¤æ˜“
func createTestTransaction(txID int) *transaction.Transaction {
	txIDBytes := make([]byte, 32)
	txIDBytes[0] = byte(txID)
	txIDBytes[1] = byte(txID >> 8)
	txIDBytes[2] = byte(txID >> 16)
	txIDBytes[3] = byte(txID >> 24)

	return &transaction.Transaction{
		Version: 1,
		Inputs: []*transaction.TxInput{
			{
				PreviousOutput: &transaction.OutPoint{
					TxId:        txIDBytes,
					OutputIndex: 0,
				},
				IsReferenceOnly: false,
				Sequence:        0xFFFFFFFF,
			},
		},
		Outputs: []*transaction.TxOutput{
			{
				Owner: []byte(fmt.Sprintf("recipient_%d", txID)),
				LockingConditions: []*transaction.LockingCondition{
					{
						Condition: &transaction.LockingCondition_SingleKeyLock{
							SingleKeyLock: &transaction.SingleKeyLock{
								KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
									RequiredAddressHash: []byte(fmt.Sprintf("addr_hash_%d", txID)),
								},
								RequiredAlgorithm: transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
								SighashType:       transaction.SignatureHashType_SIGHASH_ALL,
							},
						},
					},
				},
				OutputContent: &transaction.TxOutput_Asset{
					Asset: &transaction.AssetOutput{
						AssetContent: &transaction.AssetOutput_NativeCoin{
							NativeCoin: &transaction.NativeCoinAsset{
								Amount: "100000000000", // 1000 WES
							},
						},
					},
				},
			},
		},
		Nonce:             uint64(txID),
		CreationTimestamp: uint64(time.Now().Unix()),
		ChainId:           []byte("weisyn-testnet"),
		FeeMechanism: &transaction.Transaction_MinimumFee{
			MinimumFee: &transaction.MinimumFee{
				MinimumAmount: "5000000000", // 50 WES
			},
		},
	}
}

// createTxPool åˆ›å»ºæµ‹è¯•äº¤æ˜“æ± 
func createTxPool(t testing.TB) mempoolIfaces.TxPool {
	config := &txpool.TxPoolOptions{
		MaxSize:        10000,
		MemoryLimit:    100 * 1024 * 1024, // 100MB
		Lifetime:       time.Hour,
		MaxTxSize:      1024 * 1024, // 1MB
		MetricsEnabled: true,
		MetricsInterval: time.Minute,
	}

	memory := newMockMemoryStore()
	hashService := &mockHashService{}

	pool, err := NewTxPoolWithCache(config, nil, nil, memory, hashService, nil)
	if err != nil {
		t.Fatalf("åˆ›å»ºäº¤æ˜“æ± å¤±è´¥: %v", err)
	}

	return pool
}

// TestTxPool_ConcurrentSubmit æµ‹è¯•é«˜å¹¶å‘æäº¤äº¤æ˜“
func TestTxPool_ConcurrentSubmit(t *testing.T) {
	pool := createTxPool(t)
	defer func() {
		if closer, ok := pool.(interface{ Close() }); ok {
			closer.Close()
		}
	}()

	const (
		numGoroutines = 100
		txsPerGoroutine = 100
		totalTxs = numGoroutines * txsPerGoroutine
	)

	var (
		successCount int64
		failCount    int64
		wg           sync.WaitGroup
	)

	start := time.Now()

	// å¹¶å‘æäº¤äº¤æ˜“
	for i := 0; i < numGoroutines; i++ {
		wg.Add(1)
		go func(goroutineID int) {
			defer wg.Done()
			for j := 0; j < txsPerGoroutine; j++ {
				txID := goroutineID*txsPerGoroutine + j
				tx := createTestTransaction(txID)
				
				_, err := pool.SubmitTx(tx)
				if err != nil {
					atomic.AddInt64(&failCount, 1)
				} else {
					atomic.AddInt64(&successCount, 1)
				}
			}
		}(i)
	}

	wg.Wait()
	duration := time.Since(start)

	t.Logf("å¹¶å‘æäº¤æµ‹è¯•å®Œæˆ:")
	t.Logf("  - æ€»äº¤æ˜“æ•°: %d", totalTxs)
	t.Logf("  - æˆåŠŸæ•°: %d", successCount)
	t.Logf("  - å¤±è´¥æ•°: %d", failCount)
	t.Logf("  - è€—æ—¶: %v", duration)
	t.Logf("  - TPS: %.2f", float64(totalTxs)/duration.Seconds())

	// éªŒè¯è‡³å°‘æœ‰ä¸€äº›äº¤æ˜“æˆåŠŸ
	if successCount == 0 {
		t.Error("æ²¡æœ‰äº¤æ˜“æˆåŠŸæäº¤")
	}
}

// BenchmarkTxPool_SubmitTx åŸºå‡†æµ‹è¯•ï¼šå•äº¤æ˜“æäº¤
func BenchmarkTxPool_SubmitTx(b *testing.B) {
	pool := createTxPool(b)
	defer func() {
		if closer, ok := pool.(interface{ Close() }); ok {
			closer.Close()
		}
	}()

	b.ResetTimer()
	b.ReportAllocs()

	for i := 0; i < b.N; i++ {
		tx := createTestTransaction(i)
		_, _ = pool.SubmitTx(tx)
	}
}

// BenchmarkTxPool_GetPendingTxs åŸºå‡†æµ‹è¯•ï¼šè·å–å¾…å¤„ç†äº¤æ˜“
func BenchmarkTxPool_GetPendingTxs(b *testing.B) {
	pool := createTxPool(b)
	defer func() {
		if closer, ok := pool.(interface{ Close() }); ok {
			closer.Close()
		}
	}()

	// é¢„å…ˆæäº¤ä¸€äº›äº¤æ˜“
	const preloadCount = 1000
	for i := 0; i < preloadCount; i++ {
		tx := createTestTransaction(i)
		_, _ = pool.SubmitTx(tx)
	}

	b.ResetTimer()
	b.ReportAllocs()

	for i := 0; i < b.N; i++ {
		_, _ = pool.GetAllPendingTransactions()
	}
}

// BenchmarkTxPool_ConcurrentSubmit åŸºå‡†æµ‹è¯•ï¼šå¹¶å‘æäº¤
func BenchmarkTxPool_ConcurrentSubmit(b *testing.B) {
	pool := createTxPool(b)
	defer func() {
		if closer, ok := pool.(interface{ Close() }); ok {
			closer.Close()
		}
	}()

	b.ResetTimer()
	b.ReportAllocs()

	b.RunParallel(func(pb *testing.PB) {
		txID := 0
		for pb.Next() {
			txID++
			tx := createTestTransaction(txID)
			_, _ = pool.SubmitTx(tx)
		}
	})
}

// TestTxPool_MemoryPressure å†…å­˜å‹åŠ›æµ‹è¯•
func TestTxPool_MemoryPressure(t *testing.T) {
	pool := createTxPool(t)
	defer func() {
		if closer, ok := pool.(interface{ Close() }); ok {
			closer.Close()
		}
	}()

	const numTxs = 5000

	start := time.Now()

	// æäº¤å¤§é‡äº¤æ˜“
	for i := 0; i < numTxs; i++ {
		tx := createTestTransaction(i)
		_, err := pool.SubmitTx(tx)
		if err != nil && err.Error() != "äº¤æ˜“æ± å·²æ»¡" {
			// é™¤äº†æ± æ»¡é”™è¯¯ï¼Œå…¶ä»–é”™è¯¯éƒ½è®°å½•
			t.Logf("æäº¤äº¤æ˜“ %d å¤±è´¥: %v", i, err)
		}
	}

	duration := time.Since(start)

	// è·å–å¾…å¤„ç†äº¤æ˜“æ•°é‡
	pendingTxs, _ := pool.GetAllPendingTransactions()

	t.Logf("å†…å­˜å‹åŠ›æµ‹è¯•å®Œæˆ:")
	t.Logf("  - å°è¯•æäº¤äº¤æ˜“æ•°: %d", numTxs)
	t.Logf("  - å®é™…å¾…å¤„ç†äº¤æ˜“æ•°: %d", len(pendingTxs))
	t.Logf("  - è€—æ—¶: %v", duration)
	t.Logf("  - TPS: %.2f", float64(numTxs)/duration.Seconds())

	// éªŒè¯äº¤æ˜“æ± ä»ç„¶å¯ç”¨
	if len(pendingTxs) == 0 {
		t.Error("äº¤æ˜“æ± ä¸­æ²¡æœ‰å¾…å¤„ç†äº¤æ˜“")
	}
}

// TestTxPool_ConcurrentGetPending å¹¶å‘è·å–å¾…å¤„ç†äº¤æ˜“æµ‹è¯•
func TestTxPool_ConcurrentGetPending(t *testing.T) {
	pool := createTxPool(t)
	defer func() {
		if closer, ok := pool.(interface{ Close() }); ok {
			closer.Close()
		}
	}()

	// é¢„å…ˆæäº¤ä¸€äº›äº¤æ˜“
	const preloadCount = 1000
	for i := 0; i < preloadCount; i++ {
		tx := createTestTransaction(i)
		_, _ = pool.SubmitTx(tx)
	}

	const numGoroutines = 50

	var wg sync.WaitGroup
	start := time.Now()

	// å¹¶å‘è·å–å¾…å¤„ç†äº¤æ˜“
	for i := 0; i < numGoroutines; i++ {
		wg.Add(1)
		go func() {
			defer wg.Done()
			for j := 0; j < 100; j++ {
				_, _ = pool.GetAllPendingTransactions()
			}
		}()
	}

	wg.Wait()
	duration := time.Since(start)

	t.Logf("å¹¶å‘è·å–å¾…å¤„ç†äº¤æ˜“æµ‹è¯•å®Œæˆ:")
	t.Logf("  - Goroutineæ•°: %d", numGoroutines)
	t.Logf("  - æ¯ä¸ªGoroutineè¯·æ±‚æ•°: 100")
	t.Logf("  - æ€»è¯·æ±‚æ•°: %d", numGoroutines*100)
	t.Logf("  - è€—æ—¶: %v", duration)
	t.Logf("  - QPS: %.2f", float64(numGoroutines*100)/duration.Seconds())
}

// TestTxPool_StressMix æ··åˆå‹åŠ›æµ‹è¯•ï¼šæäº¤ã€è·å–ã€ç¡®è®¤æ··åˆæ“ä½œ
func TestTxPool_StressMix(t *testing.T) {
	pool := createTxPool(t)
	defer func() {
		if closer, ok := pool.(interface{ Close() }); ok {
			closer.Close()
		}
	}()

	const (
		numGoroutines = 50
		opsPerGoroutine = 100
	)

	var (
		submitCount   int64
		getCount      int64
		confirmCount  int64
		wg            sync.WaitGroup
	)

	start := time.Now()

	// å¯åŠ¨å¤šä¸ªgoroutineæ‰§è¡Œæ··åˆæ“ä½œ
	for i := 0; i < numGoroutines; i++ {
		wg.Add(1)
		go func(goroutineID int) {
			defer wg.Done()
			for j := 0; j < opsPerGoroutine; j++ {
				opType := j % 3
				switch opType {
				case 0: // æäº¤äº¤æ˜“
					txID := goroutineID*opsPerGoroutine + j
					tx := createTestTransaction(txID)
					if _, err := pool.SubmitTx(tx); err == nil {
						atomic.AddInt64(&submitCount, 1)
					}
				case 1: // è·å–å¾…å¤„ç†äº¤æ˜“
					_, _ = pool.GetAllPendingTransactions()
					atomic.AddInt64(&getCount, 1)
				case 2: // æ¨¡æ‹Ÿç¡®è®¤äº¤æ˜“ï¼ˆè·å–åç¡®è®¤ï¼‰
					txs, _ := pool.GetAllPendingTransactions()
					if len(txs) > 0 {
						// è·å–äº¤æ˜“å“ˆå¸Œï¼ˆç®€åŒ–å®ç°ï¼‰
						txHash := make([]byte, 32)
						rand.Read(txHash)
						pool.ConfirmTransactions([][]byte{txHash}, uint64(j))
						atomic.AddInt64(&confirmCount, 1)
					}
				}
			}
		}(i)
	}

	wg.Wait()
	duration := time.Since(start)

	t.Logf("æ··åˆå‹åŠ›æµ‹è¯•å®Œæˆ:")
	t.Logf("  - æäº¤æ“ä½œæ•°: %d", submitCount)
	t.Logf("  - è·å–æ“ä½œæ•°: %d", getCount)
	t.Logf("  - ç¡®è®¤æ“ä½œæ•°: %d", confirmCount)
	t.Logf("  - è€—æ—¶: %v", duration)
	t.Logf("  - OPS: %.2f", float64(submitCount+getCount+confirmCount)/duration.Seconds())
}

// min è¾…åŠ©å‡½æ•°
func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}

