// Package hash_test æä¾› Hash Canonicalizer çš„å•å…ƒæµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•è¦†ç›–**ï¼š
// - Canonicalizer æ ¸å¿ƒåŠŸèƒ½æµ‹è¯•
// - äº¤æ˜“å“ˆå¸Œè®¡ç®—æµ‹è¯•
// - ç­¾åå“ˆå¸Œè®¡ç®—æµ‹è¯•
// - è¾¹ç•Œæ¡ä»¶å’Œé”™è¯¯åœºæ™¯æµ‹è¯•
package hash

import (
	"context"
	"fmt"
	"testing"

	"github.com/stretchr/testify/assert"
	"google.golang.org/grpc"

	"github.com/weisyn/v1/internal/core/tx/testutil"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// ==================== Canonicalizer æ ¸å¿ƒåŠŸèƒ½æµ‹è¯• ====================

// TestNewCanonicalizer æµ‹è¯•åˆ›å»º Canonicalizer
func TestNewCanonicalizer(t *testing.T) {
	// åˆ›å»ºæ¨¡æ‹Ÿçš„ TransactionHashServiceClient
	mockClient := &MockTransactionHashServiceClient{}

	canonicalizer := NewCanonicalizer(mockClient)

	assert.NotNil(t, canonicalizer)
	assert.NotNil(t, canonicalizer.txHashClient)
}

// TestCanonicalizer_ComputeTransactionHash æµ‹è¯•è®¡ç®—äº¤æ˜“å“ˆå¸Œ
func TestCanonicalizer_ComputeTransactionHash(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{
		txHash: []byte("mock-tx-hash"),
	}

	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", testutil.CreateSingleKeyLock(nil)),
		},
	)

	hash, err := canonicalizer.ComputeTransactionHash(context.Background(), tx)

	assert.NoError(t, err)
	assert.NotNil(t, hash)
	assert.Equal(t, []byte("mock-tx-hash"), hash)
}

// TestCanonicalizer_ComputeSignatureHash æµ‹è¯•è®¡ç®—ç­¾åå“ˆå¸Œ
func TestCanonicalizer_ComputeSignatureHash(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{
		sigHash: []byte("mock-sig-hash"),
	}

	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", testutil.CreateSingleKeyLock(nil)),
		},
	)

	hash, err := canonicalizer.ComputeSignatureHash(
		context.Background(),
		tx,
		0, // inputIndex
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.NoError(t, err)
	assert.NotNil(t, hash)
	assert.Equal(t, []byte("mock-sig-hash"), hash)
}

// ==================== ComputeTransactionHash è¾¹ç•Œæ¡ä»¶æµ‹è¯• ====================

// TestCanonicalizer_ComputeTransactionHash_NilTransaction æµ‹è¯• nil transaction
func TestCanonicalizer_ComputeTransactionHash_NilTransaction(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{}
	canonicalizer := NewCanonicalizer(mockClient)

	hash, err := canonicalizer.ComputeTransactionHash(context.Background(), nil)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Equal(t, ErrInvalidTransaction, err)
}

// TestCanonicalizer_ComputeTransactionHash_NilClient æµ‹è¯• nil client
func TestCanonicalizer_ComputeTransactionHash_NilClient(t *testing.T) {
	canonicalizer := NewCanonicalizer(nil)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeTransactionHash(context.Background(), tx)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Contains(t, err.Error(), "not initialized")
}

// TestCanonicalizer_ComputeTransactionHash_ClientError æµ‹è¯• gRPC è°ƒç”¨å¤±è´¥
func TestCanonicalizer_ComputeTransactionHash_ClientError(t *testing.T) {
	mockClient := &ErrorMockTransactionHashServiceClient{
		computeHashError: fmt.Errorf("gRPC error"),
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeTransactionHash(context.Background(), tx)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Contains(t, err.Error(), "canonical serialization failed")
}

// TestCanonicalizer_ComputeTransactionHash_InvalidResponse æµ‹è¯• IsValid=false
func TestCanonicalizer_ComputeTransactionHash_InvalidResponse(t *testing.T) {
	mockClient := &InvalidResponseMockTransactionHashServiceClient{}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeTransactionHash(context.Background(), tx)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Equal(t, ErrInvalidTransaction, err)
}

// TestCanonicalizer_ComputeTransactionHash_EmptyTransaction æµ‹è¯•ç©ºäº¤æ˜“
func TestCanonicalizer_ComputeTransactionHash_EmptyTransaction(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{
		txHash: testutil.RandomTxID(),
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeTransactionHash(context.Background(), tx)

	assert.NoError(t, err)
	assert.NotNil(t, hash)
}

// TestCanonicalizer_ComputeTransactionHash_ComplexTransaction æµ‹è¯•å¤æ‚äº¤æ˜“
func TestCanonicalizer_ComputeTransactionHash_ComplexTransaction(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{
		txHash: testutil.RandomTxID(),
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
			{PreviousOutput: testutil.CreateOutPoint(nil, 1), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", testutil.CreateSingleKeyLock(nil)),
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "2000", testutil.CreateSingleKeyLock(nil)),
		},
	)

	hash, err := canonicalizer.ComputeTransactionHash(context.Background(), tx)

	assert.NoError(t, err)
	assert.NotNil(t, hash)
}

// ==================== ComputeSignatureHash è¾¹ç•Œæ¡ä»¶æµ‹è¯• ====================

// TestCanonicalizer_ComputeSignatureHash_NilTransaction æµ‹è¯• nil transaction
func TestCanonicalizer_ComputeSignatureHash_NilTransaction(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{}
	canonicalizer := NewCanonicalizer(mockClient)

	hash, err := canonicalizer.ComputeSignatureHash(
		context.Background(),
		nil,
		0,
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Equal(t, ErrInvalidTransaction, err)
}

// TestCanonicalizer_ComputeSignatureHash_NilClient æµ‹è¯• nil client
func TestCanonicalizer_ComputeSignatureHash_NilClient(t *testing.T) {
	canonicalizer := NewCanonicalizer(nil)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeSignatureHash(
		context.Background(),
		tx,
		0,
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Contains(t, err.Error(), "not initialized")
}

// TestCanonicalizer_ComputeSignatureHash_NegativeInputIndex æµ‹è¯•è´Ÿæ•° inputIndex
func TestCanonicalizer_ComputeSignatureHash_NegativeInputIndex(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeSignatureHash(
		context.Background(),
		tx,
		-1, // è´Ÿæ•°ç´¢å¼•
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Equal(t, ErrInputIndexOutOfRange, err)
}

// TestCanonicalizer_ComputeSignatureHash_InputIndexOutOfRange æµ‹è¯•è¶…å‡ºèŒƒå›´çš„ inputIndex
func TestCanonicalizer_ComputeSignatureHash_InputIndexOutOfRange(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeSignatureHash(
		context.Background(),
		tx,
		10, // è¶…å‡ºèŒƒå›´
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Equal(t, ErrInputIndexOutOfRange, err)
}

// TestCanonicalizer_ComputeSignatureHash_ClientError æµ‹è¯• gRPC è°ƒç”¨å¤±è´¥
func TestCanonicalizer_ComputeSignatureHash_ClientError(t *testing.T) {
	mockClient := &ErrorMockTransactionHashServiceClient{
		computeSignatureHashError: fmt.Errorf("gRPC error"),
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeSignatureHash(
		context.Background(),
		tx,
		0,
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Contains(t, err.Error(), "canonical serialization failed")
}

// TestCanonicalizer_ComputeSignatureHash_InvalidResponse æµ‹è¯• IsValid=false
func TestCanonicalizer_ComputeSignatureHash_InvalidResponse(t *testing.T) {
	mockClient := &InvalidResponseMockTransactionHashServiceClient{}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	hash, err := canonicalizer.ComputeSignatureHash(
		context.Background(),
		tx,
		0,
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.Error(t, err)
	assert.Nil(t, hash)
	assert.Equal(t, ErrInvalidTransaction, err)
}

// TestCanonicalizer_ComputeSignatureHash_DifferentSighashTypes æµ‹è¯•ä¸åŒçš„ SIGHASH ç±»å‹
func TestCanonicalizer_ComputeSignatureHash_DifferentSighashTypes(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{
		sigHash: testutil.RandomTxID(),
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	sighashTypes := []transaction.SignatureHashType{
		transaction.SignatureHashType_SIGHASH_ALL,
		transaction.SignatureHashType_SIGHASH_NONE,
		transaction.SignatureHashType_SIGHASH_SINGLE,
		transaction.SignatureHashType_SIGHASH_ALL_ANYONECANPAY,
		transaction.SignatureHashType_SIGHASH_NONE_ANYONECANPAY,
		transaction.SignatureHashType_SIGHASH_SINGLE_ANYONECANPAY,
	}

	for _, sighashType := range sighashTypes {
		hash, err := canonicalizer.ComputeSignatureHash(
			context.Background(),
			tx,
			0,
			sighashType,
		)

		assert.NoError(t, err, "SIGHASH type: %v", sighashType)
		assert.NotNil(t, hash, "SIGHASH type: %v", sighashType)
	}
}

// TestCanonicalizer_ComputeSignatureHash_MultipleInputs æµ‹è¯•å¤šä¸ªè¾“å…¥
func TestCanonicalizer_ComputeSignatureHash_MultipleInputs(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{
		sigHash: testutil.RandomTxID(),
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
			{PreviousOutput: testutil.CreateOutPoint(nil, 1), IsReferenceOnly: false},
			{PreviousOutput: testutil.CreateOutPoint(nil, 2), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	// æµ‹è¯•æ¯ä¸ªè¾“å…¥çš„ç­¾åå“ˆå¸Œ
	for i := 0; i < len(tx.Inputs); i++ {
		hash, err := canonicalizer.ComputeSignatureHash(
			context.Background(),
			tx,
			i,
			transaction.SignatureHashType_SIGHASH_ALL,
		)

		assert.NoError(t, err, "Input index: %d", i)
		assert.NotNil(t, hash, "Input index: %d", i)
	}
}

// ==================== ComputeSignatureHashForVerification æµ‹è¯• ====================

// TestCanonicalizer_ComputeSignatureHashForVerification æµ‹è¯•è®¡ç®—ç­¾åå“ˆå¸Œï¼ˆç”¨äºéªŒè¯ï¼‰
func TestCanonicalizer_ComputeSignatureHashForVerification(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{
		sigHash: []byte("mock-sig-hash"),
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", testutil.CreateSingleKeyLock(nil)),
		},
	)

	hash, err := canonicalizer.ComputeSignatureHashForVerification(
		context.Background(),
		tx,
		0,
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.NoError(t, err)
	assert.NotNil(t, hash)
	assert.Equal(t, []byte("mock-sig-hash"), hash)
}

// TestCanonicalizer_ComputeSignatureHashForVerification_SameAsComputeSignatureHash æµ‹è¯•éªŒè¯å“ˆå¸Œä¸ç­¾åå“ˆå¸Œç›¸åŒ
func TestCanonicalizer_ComputeSignatureHashForVerification_SameAsComputeSignatureHash(t *testing.T) {
	mockClient := &MockTransactionHashServiceClient{
		sigHash: testutil.RandomTxID(),
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	sigHash, err1 := canonicalizer.ComputeSignatureHash(
		context.Background(),
		tx,
		0,
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	verifyHash, err2 := canonicalizer.ComputeSignatureHashForVerification(
		context.Background(),
		tx,
		0,
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.NoError(t, err1)
	assert.NoError(t, err2)
	assert.Equal(t, sigHash, verifyHash) // åº”è¯¥ç›¸åŒ
}

// ==================== ä¸Šä¸‹æ–‡å’Œå¹¶å‘æµ‹è¯• ====================

// TestCanonicalizer_ComputeTransactionHash_ContextCanceled æµ‹è¯•ä¸Šä¸‹æ–‡å–æ¶ˆ
func TestCanonicalizer_ComputeTransactionHash_ContextCanceled(t *testing.T) {
	mockClient := &ErrorMockTransactionHashServiceClient{
		computeHashError: context.Canceled,
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{},
		[]*transaction.TxOutput{},
	)

	ctx, cancel := context.WithCancel(context.Background())
	cancel() // ç«‹å³å–æ¶ˆ

	hash, err := canonicalizer.ComputeTransactionHash(ctx, tx)

	assert.Error(t, err)
	assert.Nil(t, hash)
}

// TestCanonicalizer_ComputeSignatureHash_ContextCanceled æµ‹è¯•ä¸Šä¸‹æ–‡å–æ¶ˆ
func TestCanonicalizer_ComputeSignatureHash_ContextCanceled(t *testing.T) {
	mockClient := &ErrorMockTransactionHashServiceClient{
		computeSignatureHashError: context.Canceled,
	}
	canonicalizer := NewCanonicalizer(mockClient)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{PreviousOutput: testutil.CreateOutPoint(nil, 0), IsReferenceOnly: false},
		},
		[]*transaction.TxOutput{},
	)

	ctx, cancel := context.WithCancel(context.Background())
	cancel() // ç«‹å³å–æ¶ˆ

	hash, err := canonicalizer.ComputeSignatureHash(
		ctx,
		tx,
		0,
		transaction.SignatureHashType_SIGHASH_ALL,
	)

	assert.Error(t, err)
	assert.Nil(t, hash)
}

// ==================== Mock è¾…åŠ©ç±»å‹ ====================

// MockTransactionHashServiceClient æ¨¡æ‹Ÿ TransactionHashServiceClient
type MockTransactionHashServiceClient struct {
	txHash  []byte
	sigHash []byte
}

func (m *MockTransactionHashServiceClient) ComputeHash(ctx context.Context, req *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	if m.txHash == nil {
		m.txHash = testutil.RandomTxID()
	}
	return &transaction.ComputeHashResponse{
		Hash:    m.txHash,
		IsValid: true, // é»˜è®¤æœ‰æ•ˆ
	}, nil
}

func (m *MockTransactionHashServiceClient) ValidateHash(ctx context.Context, req *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	return &transaction.ValidateHashResponse{
		IsValid: true,
	}, nil
}

func (m *MockTransactionHashServiceClient) ComputeSignatureHash(ctx context.Context, req *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	if m.sigHash == nil {
		m.sigHash = testutil.RandomTxID()
	}
	return &transaction.ComputeSignatureHashResponse{
		Hash:    m.sigHash,
		IsValid: true, // é»˜è®¤æœ‰æ•ˆ
	}, nil
}

func (m *MockTransactionHashServiceClient) ValidateSignatureHash(ctx context.Context, req *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	return &transaction.ValidateSignatureHashResponse{
		IsValid: true,
	}, nil
}

// ErrorMockTransactionHashServiceClient è¿”å›é”™è¯¯çš„æ¨¡æ‹Ÿå®¢æˆ·ç«¯
type ErrorMockTransactionHashServiceClient struct {
	computeHashError          error
	computeSignatureHashError error
}

func (m *ErrorMockTransactionHashServiceClient) ComputeHash(ctx context.Context, req *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	if m.computeHashError != nil {
		return nil, m.computeHashError
	}
	return &transaction.ComputeHashResponse{
		Hash:    testutil.RandomTxID(),
		IsValid: true,
	}, nil
}

func (m *ErrorMockTransactionHashServiceClient) ValidateHash(ctx context.Context, req *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	return &transaction.ValidateHashResponse{
		IsValid: true,
	}, nil
}

func (m *ErrorMockTransactionHashServiceClient) ComputeSignatureHash(ctx context.Context, req *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	if m.computeSignatureHashError != nil {
		return nil, m.computeSignatureHashError
	}
	return &transaction.ComputeSignatureHashResponse{
		Hash:    testutil.RandomTxID(),
		IsValid: true,
	}, nil
}

func (m *ErrorMockTransactionHashServiceClient) ValidateSignatureHash(ctx context.Context, req *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	return &transaction.ValidateSignatureHashResponse{
		IsValid: true,
	}, nil
}

// InvalidResponseMockTransactionHashServiceClient è¿”å› IsValid=false çš„æ¨¡æ‹Ÿå®¢æˆ·ç«¯
type InvalidResponseMockTransactionHashServiceClient struct{}

func (m *InvalidResponseMockTransactionHashServiceClient) ComputeHash(ctx context.Context, req *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	return &transaction.ComputeHashResponse{
		Hash:    []byte("mock-hash"),
		IsValid: false,
	}, nil
}

func (m *InvalidResponseMockTransactionHashServiceClient) ValidateHash(ctx context.Context, req *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	return &transaction.ValidateHashResponse{
		IsValid: true,
	}, nil
}

func (m *InvalidResponseMockTransactionHashServiceClient) ComputeSignatureHash(ctx context.Context, req *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	return &transaction.ComputeSignatureHashResponse{
		Hash:    []byte("mock-sig-hash"),
		IsValid: false,
	}, nil
}

func (m *InvalidResponseMockTransactionHashServiceClient) ValidateSignatureHash(ctx context.Context, req *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	return &transaction.ValidateSignatureHashResponse{
		IsValid: true,
	}, nil
}
