// Package signer_test æä¾› Signer çš„å•å…ƒæµ‹è¯•
//
// ğŸ§ª **æµ‹è¯•è¦†ç›–**ï¼š
// - LocalSigner æ ¸å¿ƒåŠŸèƒ½æµ‹è¯•
// - ç­¾ååŠŸèƒ½æµ‹è¯•
// - å…¬é’¥è·å–æµ‹è¯•
// - è¾¹ç•Œæ¡ä»¶å’Œé”™è¯¯åœºæ™¯æµ‹è¯•
package signer

import (
	"context"
	"fmt"
	"os"
	"testing"

	"github.com/stretchr/testify/assert"
	"github.com/stretchr/testify/require"
	"google.golang.org/grpc"

	"github.com/weisyn/v1/internal/core/tx/ports/hash"
	"github.com/weisyn/v1/internal/core/tx/testutil"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
)

// ==================== LocalSigner æ ¸å¿ƒåŠŸèƒ½æµ‹è¯• ====================

// TestNewLocalSigner_Success æµ‹è¯•åˆ›å»º LocalSigner æˆåŠŸ
func TestNewLocalSigner_Success(t *testing.T) {
	// åˆ›å»ºæ¨¡æ‹Ÿçš„ä¾èµ–
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(
		config,
		mockKeyMgr,
		mockSigMgr,
		mockCanonicalizer,
		logger,
	)

	assert.NoError(t, err)
	assert.NotNil(t, signer)
}

// TestLocalSigner_Sign æµ‹è¯•ç­¾åäº¤æ˜“
func TestLocalSigner_Sign(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{
		signature: []byte("mock-signature"),
	}
	mockClient := &MockTransactionHashServiceClientForLocal{
		txHash: []byte("mock-tx-hash"),
	}
	mockCanonicalizer := hash.NewCanonicalizer(mockClient)
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(
		config,
		mockKeyMgr,
		mockSigMgr,
		mockCanonicalizer,
		logger,
	)
	require.NoError(t, err)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{
			{
				PreviousOutput:  testutil.CreateOutPoint(nil, 0),
				IsReferenceOnly: false,
			},
		},
		[]*transaction.TxOutput{
			testutil.CreateNativeCoinOutput(testutil.RandomAddress(), "1000", testutil.CreateSingleKeyLock(nil)),
		},
	)

	signature, err := signer.Sign(context.Background(), tx)

	assert.NoError(t, err)
	assert.NotNil(t, signature)
	assert.Equal(t, []byte("mock-signature"), signature.Value)
}

// TestLocalSigner_PublicKey æµ‹è¯•è·å–å…¬é’¥
func TestLocalSigner_PublicKey(t *testing.T) {
	mockKeyMgr := &MockKeyManager{
		publicKey: &transaction.PublicKey{
			Value: testutil.RandomPublicKey(),
		},
	}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(
		config,
		mockKeyMgr,
		mockSigMgr,
		mockCanonicalizer,
		logger,
	)
	require.NoError(t, err)

	publicKey, err := signer.PublicKey()

	assert.NoError(t, err)
	assert.NotNil(t, publicKey)
	assert.Equal(t, mockKeyMgr.publicKey.Value, publicKey.Value)
}

// TestLocalSigner_Algorithm æµ‹è¯•è·å–ç®—æ³•
func TestLocalSigner_Algorithm(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(
		config,
		mockKeyMgr,
		mockSigMgr,
		mockCanonicalizer,
		logger,
	)
	require.NoError(t, err)

	algorithm := signer.Algorithm()

	assert.Equal(t, transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1, algorithm)
}

// ==================== LocalSigner é”™è¯¯åœºæ™¯æµ‹è¯• ====================

// TestNewLocalSigner_NilConfig æµ‹è¯• nil config
func TestNewLocalSigner_NilConfig(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	// æ³¨æ„ï¼šNewLocalSigner ä¼šå…ˆè°ƒç”¨ checkEnvironment(config.Environment, logger)
	// å¦‚æœ config ä¸º nilï¼Œä¼šåœ¨è®¿é—® config.Environment æ—¶ panic
	// è¿™é‡Œæµ‹è¯•åº”è¯¥æ•è· panic æˆ–è¿”å›é”™è¯¯
	defer func() {
		if r := recover(); r != nil {
			// å¦‚æœ panicï¼Œè¯´æ˜æ²¡æœ‰å¤„ç† nil config
			// è¿™æ˜¯é¢„æœŸçš„è¡Œä¸ºï¼Œå› ä¸ºè®¿é—® nil config çš„å­—æ®µä¼š panic
			assert.NotNil(t, r)
		}
	}()

	_, err := NewLocalSigner(nil, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)

	// å¦‚æœè¿”å›äº†é”™è¯¯è€Œä¸æ˜¯ panicï¼ŒéªŒè¯é”™è¯¯
	if err != nil {
		assert.Error(t, err)
	}
}

// TestNewLocalSigner_InvalidPrivateKey æµ‹è¯•æ— æ•ˆç§é’¥
func TestNewLocalSigner_InvalidPrivateKey(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "invalid-key", // æ— æ•ˆçš„ç§é’¥æ ¼å¼
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	_, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "è§£æç§é’¥å¤±è´¥")
}

// TestNewLocalSigner_ShortPrivateKey æµ‹è¯•ç§é’¥é•¿åº¦ä¸è¶³
func TestNewLocalSigner_ShortPrivateKey(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef", // åªæœ‰32ä¸ªå­—ç¬¦ï¼Œéœ€è¦64ä¸ª
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	_, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ç§é’¥é•¿åº¦æ— æ•ˆ")
}

// TestNewLocalSigner_PrivateKeyWithPrefix æµ‹è¯•å¸¦å‰ç¼€çš„ç§é’¥ï¼ˆå…¼å®¹æ€§å®¹é”™ï¼‰
// æ³¨æ„ï¼šæ ¹æ® WES è§„èŒƒï¼Œç§é’¥è¾“å…¥å¯ä»¥å¸¦ 0x å‰ç¼€ï¼ˆä¼šè‡ªåŠ¨å‰¥ç¦»ï¼‰ï¼Œä½†æ¨èä½¿ç”¨çº¯ hex æ ¼å¼
func TestNewLocalSigner_PrivateKeyWithPrefix(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0x0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef", // å¸¦ 0x å‰ç¼€ï¼ˆå…¼å®¹æ€§æµ‹è¯•ï¼‰
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)

	assert.NoError(t, err)
	assert.NotNil(t, signer)
}

// TestLocalSigner_Sign_NilTransaction æµ‹è¯• nil transaction
func TestLocalSigner_Sign_NilTransaction(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)
	require.NoError(t, err)

	_, err = signer.Sign(context.Background(), nil)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "transaction is nil")
}

// TestLocalSigner_Sign_HashError æµ‹è¯•å“ˆå¸Œè®¡ç®—å¤±è´¥
func TestLocalSigner_Sign_HashError(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockClient := &MockTransactionHashServiceClientForLocal{
		computeHashError: fmt.Errorf("hash computation failed"),
	}
	mockCanonicalizer := hash.NewCanonicalizer(mockClient)
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)
	require.NoError(t, err)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{},
		[]*transaction.TxOutput{},
	)

	_, err = signer.Sign(context.Background(), tx)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥")
}

// TestLocalSigner_Sign_SignatureError æµ‹è¯•ç­¾åå¤±è´¥
func TestLocalSigner_Sign_SignatureError(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{
		signError: fmt.Errorf("signature failed"),
	}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)
	require.NoError(t, err)

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{},
		[]*transaction.TxOutput{},
	)

	_, err = signer.Sign(context.Background(), tx)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ECDSAç­¾åå¤±è´¥")
}

// TestLocalSigner_Sign_UnsupportedAlgorithm æµ‹è¯•ä¸æ”¯æŒçš„ç®—æ³•
func TestLocalSigner_Sign_UnsupportedAlgorithm(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_UNKNOWN,
		Environment:   "testing",
	}

	// æ³¨æ„ï¼šderivePublicKey ä¸æ”¯æŒ UNKNOWN ç®—æ³•ï¼Œåˆ›å»º signer æ—¶ä¼šå¤±è´¥
	_, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)

	// åˆ›å»º signer æ—¶å°±ä¼šå¤±è´¥ï¼Œå› ä¸º derivePublicKey ä¸æ”¯æŒ UNKNOWN ç®—æ³•
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "æå–å…¬é’¥å¤±è´¥")
}

// TestLocalSigner_SignBytes_Success æµ‹è¯• SignBytes æˆåŠŸ
func TestLocalSigner_SignBytes_Success(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{
		signature: []byte("mock-signature"),
	}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)
	require.NoError(t, err)

	signature, err := signer.SignBytes(context.Background(), []byte("test-data"))

	assert.NoError(t, err)
	assert.NotNil(t, signature)
	assert.Equal(t, []byte("mock-signature"), signature)
}

// TestLocalSigner_SignBytes_EmptyData æµ‹è¯•ç©ºæ•°æ®
func TestLocalSigner_SignBytes_EmptyData(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)
	require.NoError(t, err)

	_, err = signer.SignBytes(context.Background(), nil)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "å¾…ç­¾åæ•°æ®ä¸ºç©º")
}

// TestLocalSigner_SignBytes_SignatureError æµ‹è¯• SignBytes ç­¾åå¤±è´¥
func TestLocalSigner_SignBytes_SignatureError(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{
		signError: fmt.Errorf("signature failed"),
	}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)
	require.NoError(t, err)

	_, err = signer.SignBytes(context.Background(), []byte("test-data"))

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ECDSAç­¾åå¤±è´¥")
}

// TestLocalSigner_SignBytes_UnsupportedAlgorithm æµ‹è¯•ä¸æ”¯æŒçš„ç®—æ³•
func TestLocalSigner_SignBytes_UnsupportedAlgorithm(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_UNKNOWN,
		Environment:   "testing",
	}

	// æ³¨æ„ï¼šderivePublicKey ä¸æ”¯æŒ UNKNOWN ç®—æ³•ï¼Œåˆ›å»º signer æ—¶ä¼šå¤±è´¥
	_, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)

	// åˆ›å»º signer æ—¶å°±ä¼šå¤±è´¥ï¼Œå› ä¸º derivePublicKey ä¸æ”¯æŒ UNKNOWN ç®—æ³•
	assert.Error(t, err)
	assert.Contains(t, err.Error(), "æå–å…¬é’¥å¤±è´¥")
}

// TestLocalSigner_PublicKey_Nil æµ‹è¯• nil å…¬é’¥
func TestLocalSigner_PublicKey_Nil(t *testing.T) {
	signer := &LocalSigner{
		publicKey: nil,
	}

	publicKey, err := signer.PublicKey()

	assert.NoError(t, err)
	assert.Nil(t, publicKey)
}

// TestLocalSigner_ED25519 æµ‹è¯• ED25519 ç®—æ³•
func TestLocalSigner_ED25519(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{
		signature: []byte("mock-ed25519-signature"),
	}
	mockCanonicalizer := NewMockCanonicalizer()
	logger := &testutil.MockLogger{}

	config := &LocalSignerConfig{
		PrivateKeyHex: "0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		Algorithm:     transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ED25519,
		Environment:   "testing",
	}

	signer, err := NewLocalSigner(config, mockKeyMgr, mockSigMgr, mockCanonicalizer, logger)
	require.NoError(t, err)

	assert.Equal(t, transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ED25519, signer.Algorithm())

	tx := testutil.CreateTransaction(
		[]*transaction.TxInput{},
		[]*transaction.TxOutput{},
	)

	signature, err := signer.Sign(context.Background(), tx)

	assert.NoError(t, err)
	assert.NotNil(t, signature)
	assert.Equal(t, []byte("mock-ed25519-signature"), signature.Value)
}

// ==================== checkEnvironment æµ‹è¯• ====================

// TestCheckEnvironment_ProductionEnv æµ‹è¯•ç”Ÿäº§ç¯å¢ƒæ£€æŸ¥
func TestCheckEnvironment_ProductionEnv(t *testing.T) {
	logger := &testutil.MockLogger{}

	// è®¾ç½®ç¯å¢ƒå˜é‡ ENV=production
	os.Setenv("ENV", "production")
	defer os.Unsetenv("ENV")

	err := checkEnvironment("testing", logger)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ç¦æ­¢åœ¨ç”Ÿäº§ç¯å¢ƒä½¿ç”¨")
}

// TestCheckEnvironment_ProductionEnvironment æµ‹è¯• ENVIRONMENT ç¯å¢ƒå˜é‡
func TestCheckEnvironment_ProductionEnvironment(t *testing.T) {
	logger := &testutil.MockLogger{}

	// è®¾ç½®ç¯å¢ƒå˜é‡ ENVIRONMENT=production
	os.Setenv("ENVIRONMENT", "production")
	defer os.Unsetenv("ENVIRONMENT")

	err := checkEnvironment("testing", logger)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ç¦æ­¢åœ¨ç”Ÿäº§ç¯å¢ƒä½¿ç”¨")
}

// TestCheckEnvironment_ProductionConfig æµ‹è¯•é…ç½®ä¸­çš„ç”Ÿäº§ç¯å¢ƒ
func TestCheckEnvironment_ProductionConfig(t *testing.T) {
	logger := &testutil.MockLogger{}

	err := checkEnvironment("production", logger)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ç¦æ­¢åœ¨ç”Ÿäº§ç¯å¢ƒä½¿ç”¨")
}

// TestCheckEnvironment_ProductionHostname æµ‹è¯•ä¸»æœºååŒ…å« prod
func TestCheckEnvironment_ProductionHostname(t *testing.T) {
	logger := &testutil.MockLogger{}

	// æ³¨æ„ï¼šè¿™ä¸ªæµ‹è¯•ä¾èµ–äºå®é™…çš„ä¸»æœºåï¼Œå¯èƒ½åœ¨ä¸åŒç¯å¢ƒä¸­è¡¨ç°ä¸åŒ
	// å¦‚æœä¸»æœºååŒ…å« "prod" æˆ– "production"ï¼Œåº”è¯¥è¿”å›é”™è¯¯
	err := checkEnvironment("testing", logger)

	// å¦‚æœä¸»æœºååŒ…å« prodï¼Œåº”è¯¥è¿”å›é”™è¯¯
	// å¦åˆ™åº”è¯¥é€šè¿‡
	if err != nil {
		assert.Contains(t, err.Error(), "ç¦æ­¢åœ¨ç”Ÿäº§ç¯å¢ƒä½¿ç”¨")
	}
}

// TestCheckEnvironment_Success æµ‹è¯•ç¯å¢ƒæ£€æŸ¥é€šè¿‡
func TestCheckEnvironment_Success(t *testing.T) {
	logger := &testutil.MockLogger{}

	// ç¡®ä¿ç¯å¢ƒå˜é‡ä¸åŒ…å« prod
	os.Unsetenv("ENV")
	os.Unsetenv("ENVIRONMENT")

	err := checkEnvironment("testing", logger)

	// å¦‚æœä¸»æœºåä¸åŒ…å« prodï¼Œåº”è¯¥é€šè¿‡
	// å¦åˆ™å¯èƒ½è¿”å›é”™è¯¯
	_ = err
}

// ==================== derivePublicKey æµ‹è¯• ====================

// TestDerivePublicKey_InvalidKeyLength æµ‹è¯•æ— æ•ˆç§é’¥é•¿åº¦
func TestDerivePublicKey_InvalidKeyLength(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	logger := &testutil.MockLogger{}

	// ä½¿ç”¨æ— æ•ˆé•¿åº¦çš„ç§é’¥
	invalidKey := []byte("short-key")

	_, err := derivePublicKey(
		invalidKey,
		transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		mockKeyMgr,
		logger,
	)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ç§é’¥é•¿åº¦æ— æ•ˆ")
}

// TestDerivePublicKey_ECDSA_InvalidPublicKeyLength æµ‹è¯• ECDSA å…¬é’¥é•¿åº¦æ— æ•ˆ
func TestDerivePublicKey_ECDSA_InvalidPublicKeyLength(t *testing.T) {
	mockKeyMgr := &MockKeyManager{
		publicKey: &transaction.PublicKey{
			Value: []byte("invalid-length"), // ä¸æ˜¯33å­—èŠ‚
		},
	}
	logger := &testutil.MockLogger{}

	privateKey := make([]byte, 32)
	copy(privateKey, "0123456789abcdef0123456789abcdef")

	_, err := derivePublicKey(
		privateKey,
		transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		mockKeyMgr,
		logger,
	)

	// å¦‚æœ DerivePublicKey è¿”å›çš„é•¿åº¦ä¸æ˜¯33å­—èŠ‚ï¼Œåº”è¯¥è¿”å›é”™è¯¯
	assert.Error(t, err)
}

// TestDerivePublicKey_ED25519_33Bytes æµ‹è¯• ED25519 å…¬é’¥ä¸º33å­—èŠ‚ï¼ˆå‹ç¼©æ ¼å¼ï¼‰
func TestDerivePublicKey_ED25519_33Bytes(t *testing.T) {
	// åˆ›å»ºä¸€ä¸ªè¿”å›33å­—èŠ‚å…¬é’¥çš„ MockKeyManager
	mockKeyMgr := &MockKeyManager{
		publicKey: &transaction.PublicKey{
			Value: make([]byte, 33), // 33å­—èŠ‚å‹ç¼©æ ¼å¼
		},
	}
	logger := &testutil.MockLogger{}

	privateKey := make([]byte, 32)
	copy(privateKey, "0123456789abcdef0123456789abcdef")

	publicKey, err := derivePublicKey(
		privateKey,
		transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ED25519,
		mockKeyMgr,
		logger,
	)

	// å¦‚æœæˆåŠŸï¼Œå…¬é’¥åº”è¯¥æ˜¯32å­—èŠ‚ï¼ˆä»33å­—èŠ‚å‹ç¼©æ ¼å¼ä¸­æå–ï¼‰
	if err == nil {
		assert.NotNil(t, publicKey)
		assert.Equal(t, 32, len(publicKey.Value))
	}
}

// TestDerivePublicKey_UnsupportedAlgorithm æµ‹è¯•ä¸æ”¯æŒçš„ç®—æ³•
func TestDerivePublicKey_UnsupportedAlgorithm(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	logger := &testutil.MockLogger{}

	privateKey := make([]byte, 32)
	copy(privateKey, "0123456789abcdef0123456789abcdef")

	_, err := derivePublicKey(
		privateKey,
		transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_UNKNOWN,
		mockKeyMgr,
		logger,
	)

	assert.Error(t, err)
	assert.Contains(t, err.Error(), "ä¸æ”¯æŒçš„ç­¾åç®—æ³•")
}

// ==================== NewLocalSignerForTesting æµ‹è¯• ====================

// TestNewLocalSignerForTesting_Success æµ‹è¯•åˆ›å»ºæµ‹è¯•ç­¾åå™¨æˆåŠŸ
func TestNewLocalSignerForTesting_Success(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	signer, err := NewLocalSignerForTesting(
		"0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef",
		transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		mockKeyMgr,
		mockSigMgr,
		mockCanonicalizer,
	)

	assert.NoError(t, err)
	assert.NotNil(t, signer)
}

// TestNewLocalSignerForTesting_InvalidKey æµ‹è¯•æ— æ•ˆç§é’¥
func TestNewLocalSignerForTesting_InvalidKey(t *testing.T) {
	mockKeyMgr := &MockKeyManager{}
	mockSigMgr := &MockSignatureManager{}
	mockCanonicalizer := NewMockCanonicalizer()

	_, err := NewLocalSignerForTesting(
		"invalid-key",
		transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
		mockKeyMgr,
		mockSigMgr,
		mockCanonicalizer,
	)

	assert.Error(t, err)
}

// ==================== Mock è¾…åŠ©ç±»å‹ ====================

// MockKeyManager æ¨¡æ‹Ÿ KeyManager
type MockKeyManager struct {
	publicKey *transaction.PublicKey
}

func (m *MockKeyManager) GenerateKeyPair() ([]byte, []byte, error) {
	return nil, nil, nil
}

func (m *MockKeyManager) DeriveKeyPair(seed []byte, index uint32) ([]byte, []byte, error) {
	return nil, nil, nil
}

func (m *MockKeyManager) GetPublicKey(privateKey []byte) ([]byte, error) {
	if m.publicKey != nil {
		return m.publicKey.Value, nil
	}
	return testutil.RandomPublicKey(), nil
}

func (m *MockKeyManager) CompressPublicKey(publicKey []byte) ([]byte, error) {
	return publicKey, nil
}

func (m *MockKeyManager) DecompressPublicKey(compressedKey []byte) ([]byte, error) {
	// ç®€åŒ–å®ç°ï¼šè¿”å›æœªå‹ç¼©æ ¼å¼ï¼ˆ65å­—èŠ‚ï¼‰
	if len(compressedKey) == 33 {
		uncompressed := make([]byte, 65)
		uncompressed[0] = 0x04 // æœªå‹ç¼©æ ‡è®°
		copy(uncompressed[1:], compressedKey[1:])
		return uncompressed, nil
	}
	return compressedKey, nil
}

func (m *MockKeyManager) GenerateCompressedKeyPair() ([]byte, []byte, error) {
	return m.GenerateKeyPair()
}

func (m *MockKeyManager) DerivePublicKey(privateKey []byte) ([]byte, error) {
	return m.GetPublicKey(privateKey)
}

func (m *MockKeyManager) DeriveUncompressedPublicKey(privateKey []byte) ([]byte, error) {
	pubKey, err := m.GetPublicKey(privateKey)
	if err != nil {
		return nil, err
	}
	return m.DecompressPublicKey(pubKey)
}

func (m *MockKeyManager) ParsePublicKeyString(publicKeyHex string) ([]byte, error) {
	// ç®€åŒ–å®ç°
	return []byte(publicKeyHex), nil
}

func (m *MockKeyManager) ValidatePrivateKey(privateKey []byte) error {
	if len(privateKey) != 32 {
		return fmt.Errorf("invalid private key length")
	}
	return nil
}

func (m *MockKeyManager) ValidatePublicKey(publicKey []byte) error {
	if len(publicKey) != 33 && len(publicKey) != 65 {
		return fmt.Errorf("invalid public key length")
	}
	return nil
}

// MockSignatureManager æ¨¡æ‹Ÿ SignatureManager
type MockSignatureManager struct {
	signature []byte
	signError error
}

func (m *MockSignatureManager) Sign(data []byte, privateKey []byte) ([]byte, error) {
	if m.signError != nil {
		return nil, m.signError
	}
	if m.signature != nil {
		return m.signature, nil
	}
	return []byte("mock-signature"), nil
}

func (m *MockSignatureManager) Verify(data, signature, publicKey []byte) bool {
	return true
}

func (m *MockSignatureManager) RecoverPublicKey(hash []byte, signature []byte) ([]byte, error) {
	return testutil.RandomPublicKey(), nil
}

func (m *MockSignatureManager) NormalizeSignature(signature []byte) ([]byte, error) {
	return signature, nil
}

func (m *MockSignatureManager) SignTransaction(txHash []byte, privateKey []byte, sigHashType crypto.SignatureHashType) ([]byte, error) {
	return m.Sign(txHash, privateKey)
}

func (m *MockSignatureManager) VerifyTransactionSignature(txHash []byte, signature []byte, publicKey []byte, sigHashType crypto.SignatureHashType) bool {
	return m.Verify(txHash, signature, publicKey)
}

func (m *MockSignatureManager) SignMessage(message []byte, privateKey []byte) ([]byte, error) {
	return m.Sign(message, privateKey)
}

func (m *MockSignatureManager) VerifyMessage(message []byte, signature []byte, publicKey []byte) bool {
	return m.Verify(message, signature, publicKey)
}

func (m *MockSignatureManager) ValidateSignature(signature []byte) error {
	if len(signature) == 0 {
		return fmt.Errorf("signature is empty")
	}
	return nil
}

func (m *MockSignatureManager) RecoverAddress(hash []byte, signature []byte) (string, error) {
	pubKey, err := m.RecoverPublicKey(hash, signature)
	if err != nil {
		return "", err
	}
	// ç®€åŒ–å®ç°ï¼šè¿”å›å…¬é’¥çš„åå…­è¿›åˆ¶å­—ç¬¦ä¸²ä½œä¸ºåœ°å€
	return fmt.Sprintf("%x", pubKey), nil
}

func (m *MockSignatureManager) SignBatch(dataList [][]byte, privateKey []byte) ([][]byte, error) {
	signatures := make([][]byte, len(dataList))
	for i, data := range dataList {
		sig, err := m.Sign(data, privateKey)
		if err != nil {
			return nil, err
		}
		signatures[i] = sig
	}
	return signatures, nil
}

func (m *MockSignatureManager) VerifyBatch(dataList [][]byte, signatureList [][]byte, publicKeyList [][]byte) ([]bool, error) {
	results := make([]bool, len(dataList))
	for i := range dataList {
		results[i] = m.Verify(dataList[i], signatureList[i], publicKeyList[i])
	}
	return results, nil
}

// MockHashManager æ¨¡æ‹Ÿ HashManager
type MockHashManager struct{}

func (m *MockHashManager) SHA256(data []byte) []byte {
	return testutil.RandomBytes(32)
}

func (m *MockHashManager) Keccak256(data []byte) []byte {
	return testutil.RandomBytes(32)
}

func (m *MockHashManager) RIPEMD160(data []byte) []byte {
	return testutil.RandomBytes(20)
}

func (m *MockHashManager) DoubleSHA256(data []byte) []byte {
	return testutil.RandomBytes(32)
}

// MockCanonicalizer æ¨¡æ‹Ÿ Canonicalizer
// æ³¨æ„ï¼šNewLocalSigner éœ€è¦ *hash.Canonicalizer ç±»å‹ï¼Œæ‰€ä»¥è¿™é‡Œåˆ›å»ºä¸€ä¸ªåŒ…è£…å™¨
type MockCanonicalizer struct {
	txHash  []byte
	sigHash []byte
}

// NewMockCanonicalizer åˆ›å»ºæ¨¡æ‹Ÿ Canonicalizerï¼ˆè¿”å› *hash.Canonicalizerï¼‰
func NewMockCanonicalizer() *hash.Canonicalizer {
	mockClient := &MockTransactionHashServiceClientForLocal{
		txHash:  testutil.RandomTxID(),
		sigHash: testutil.RandomTxID(),
	}
	return hash.NewCanonicalizer(mockClient)
}

// MockTransactionHashServiceClientForLocal æ¨¡æ‹Ÿ TransactionHashServiceClientï¼ˆç”¨äºåˆ›å»º MockCanonicalizerï¼Œé¿å…ä¸ kms_test.go å†²çªï¼‰
type MockTransactionHashServiceClientForLocal struct {
	txHash           []byte
	sigHash          []byte
	computeHashError error
}

func (m *MockTransactionHashServiceClientForLocal) ComputeHash(ctx context.Context, req *transaction.ComputeHashRequest, opts ...grpc.CallOption) (*transaction.ComputeHashResponse, error) {
	if m.computeHashError != nil {
		return nil, m.computeHashError
	}
	if m.txHash != nil {
		return &transaction.ComputeHashResponse{
			Hash:    m.txHash,
			IsValid: true,
		}, nil
	}
	return &transaction.ComputeHashResponse{
		Hash:    testutil.RandomTxID(),
		IsValid: true,
	}, nil
}

func (m *MockTransactionHashServiceClientForLocal) ValidateHash(ctx context.Context, req *transaction.ValidateHashRequest, opts ...grpc.CallOption) (*transaction.ValidateHashResponse, error) {
	return &transaction.ValidateHashResponse{
		IsValid: true,
	}, nil
}

func (m *MockTransactionHashServiceClientForLocal) ComputeSignatureHash(ctx context.Context, req *transaction.ComputeSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ComputeSignatureHashResponse, error) {
	if m.sigHash != nil {
		return &transaction.ComputeSignatureHashResponse{
			Hash:    m.sigHash,
			IsValid: true,
		}, nil
	}
	return &transaction.ComputeSignatureHashResponse{
		Hash:    testutil.RandomTxID(),
		IsValid: true,
	}, nil
}

func (m *MockTransactionHashServiceClientForLocal) ValidateSignatureHash(ctx context.Context, req *transaction.ValidateSignatureHashRequest, opts ...grpc.CallOption) (*transaction.ValidateSignatureHashResponse, error) {
	return &transaction.ValidateSignatureHashResponse{
		IsValid: true,
	}, nil
}
